@@ -1,11 +1,54 @@
+/*
+ * Decompiled with CFR 0.152.
+ * 
+ * Could not load the following classes:
+ *  dev.langchain4j.agentic.UntypedAgent
+ *  dev.langchain4j.agentic.internal.A2AClientBuilder
+ *  dev.langchain4j.agentic.internal.InternalAgent
+ *  dev.langchain4j.agentic.observability.AgentListener
+ *  dev.langchain4j.agentic.observability.ComposedAgentListener
+ *  dev.langchain4j.agentic.planner.AgentArgument
+ *  dev.langchain4j.agentic.planner.AgentInstance
+ *  dev.langchain4j.agentic.planner.AgenticSystemTopology
+ *  dev.langchain4j.agentic.planner.Planner
+ *  dev.langchain4j.agentic.scope.AgenticScope
+ *  dev.langchain4j.agentic.scope.DefaultAgenticScope
+ *  dev.langchain4j.agentic.scope.ResultWithAgenticScope
+ *  dev.langchain4j.invocation.LangChain4jManaged
+ *  dev.langchain4j.service.ParameterNameResolver
+ *  dev.langchain4j.service.output.ServiceOutputParser
+ *  org.a2aproject.sdk.A2A
+ *  org.a2aproject.sdk.client.Client
+ *  org.a2aproject.sdk.client.ClientBuilder
+ *  org.a2aproject.sdk.client.MessageEvent
+ *  org.a2aproject.sdk.client.TaskEvent
+ *  org.a2aproject.sdk.client.TaskUpdateEvent
+ *  org.a2aproject.sdk.client.transport.jsonrpc.JSONRPCTransport
+ *  org.a2aproject.sdk.client.transport.jsonrpc.JSONRPCTransportConfigBuilder
+ *  org.a2aproject.sdk.client.transport.spi.ClientTransportConfigBuilder
+ *  org.a2aproject.sdk.spec.A2AClientError
+ *  org.a2aproject.sdk.spec.A2AClientException
+ *  org.a2aproject.sdk.spec.AgentCard
+ *  org.a2aproject.sdk.spec.Message
+ *  org.a2aproject.sdk.spec.Message$Builder
+ *  org.a2aproject.sdk.spec.Message$Role
+ *  org.a2aproject.sdk.spec.Part
+ *  org.a2aproject.sdk.spec.Task
+ *  org.a2aproject.sdk.spec.TaskState
+ *  org.a2aproject.sdk.spec.TextPart
+ *  org.slf4j.Logger
+ *  org.slf4j.LoggerFactory
+ */
 package dev.langchain4j.agentic.a2a;
 
-import static dev.langchain4j.agentic.observability.ComposedAgentListener.composeWithInherited;
-
 import dev.langchain4j.agentic.UntypedAgent;
+import dev.langchain4j.agentic.a2a.A2AClientInstance;
+import dev.langchain4j.agentic.a2a.A2AContextId;
+import dev.langchain4j.agentic.a2a.A2ATaskId;
 import dev.langchain4j.agentic.internal.A2AClientBuilder;
 import dev.langchain4j.agentic.internal.InternalAgent;
 import dev.langchain4j.agentic.observability.AgentListener;
+import dev.langchain4j.agentic.observability.ComposedAgentListener;
 import dev.langchain4j.agentic.planner.AgentArgument;
 import dev.langchain4j.agentic.planner.AgentInstance;
 import dev.langchain4j.agentic.planner.AgenticSystemTopology;
@@ -18,6 +61,7 @@ import dev.langchain4j.service.ParameterNameResolver;
 import dev.langchain4j.service.output.ServiceOutputParser;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
+import java.lang.reflect.Parameter;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Proxy;
 import java.lang.reflect.Type;
@@ -27,19 +71,17 @@ import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
-import java.util.Collections;
 import org.a2aproject.sdk.A2A;
 import org.a2aproject.sdk.client.Client;
 import org.a2aproject.sdk.client.ClientBuilder;
-import org.a2aproject.sdk.client.ClientEvent;
 import org.a2aproject.sdk.client.MessageEvent;
 import org.a2aproject.sdk.client.TaskEvent;
 import org.a2aproject.sdk.client.TaskUpdateEvent;
 import org.a2aproject.sdk.client.transport.jsonrpc.JSONRPCTransport;
 import org.a2aproject.sdk.client.transport.jsonrpc.JSONRPCTransportConfigBuilder;
+import org.a2aproject.sdk.client.transport.spi.ClientTransportConfigBuilder;
 import org.a2aproject.sdk.spec.A2AClientError;
 import org.a2aproject.sdk.spec.A2AClientException;
 import org.a2aproject.sdk.spec.AgentCard;
@@ -51,122 +93,61 @@ import org.a2aproject.sdk.spec.TextPart;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class DefaultA2AClientBuilder<T> implements A2AClientBuilder<T>, InternalAgent, InvocationHandler {
-    private class A2AInvocationResult {
-        private final Object parsedResult;
-        private final String contextIdKey;
-        private final String contextId;
-        private final String taskIdKey;
-        private final String taskId;
-
-        public A2AInvocationResult(Object parsedResult, String contextIdKey, String contextId, String taskIdKey, String taskId) {
-            this.parsedResult = parsedResult;
-            this.contextIdKey = contextIdKey;
-            this.contextId = contextId;
-            this.taskIdKey = taskIdKey;
-            this.taskId = taskId;
-        }
-
-        public Object getParsedResult() {
-            return parsedResult;
-        }
-
-        public String getContextIdKey() {
-            return contextIdKey;
-        }
-
-        public String getContextId() {
-            return contextId;
-        }
-
-        public String getTaskIdKey() {
-            return taskIdKey;
-        }
-
-        public String getTaskId() {
-            return taskId;
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (o == null || getClass() != o.getClass()) return false;
-            A2AInvocationResult that = (A2AInvocationResult) o;
-            return java.util.Objects.equals(this.parsedResult, that.parsedResult) && java.util.Objects.equals(this.contextIdKey, that.contextIdKey) && java.util.Objects.equals(this.contextId, that.contextId) && java.util.Objects.equals(this.taskIdKey, that.taskIdKey) && java.util.Objects.equals(this.taskId, that.taskId);
-        }
-
-        @Override
-        public int hashCode() {
-            return java.util.Objects.hash(parsedResult, contextIdKey, contextId, taskIdKey, taskId);
-        }
-
-        @Override
-        public String toString() {
-            return "A2AInvocationResult{"parsedResult=" + parsedResult + , "contextIdKey=" + contextIdKey + , "contextId=" + contextId + , "taskIdKey=" + taskIdKey + , "taskId=" + taskId + "}"";
-        }
-
-    }
-
+public class DefaultA2AClientBuilder<T>
+implements A2AClientBuilder<T>,
+InternalAgent,
+InvocationHandler {
     private final ServiceOutputParser serviceOutputParser = new ServiceOutputParser();
-
     private final Class<T> agentServiceClass;
     private static final Logger LOG = LoggerFactory.getLogger(DefaultA2AClientBuilder.class);
-
     private final AgentCard agentCard;
     private Client a2aClient;
     private Consumer<ClientBuilder> clientCustomizer;
-
     private final String name;
     private String agentId;
     private InternalAgent parent;
-
     private String[] inputKeys;
     private String outputKey;
     private boolean async;
-
     private AgentListener agentListener;
 
     DefaultA2AClientBuilder(String a2aServerUrl, Class<T> agentServiceClass) {
-        this.agentCard = agentCard(a2aServerUrl);
-        this.name = agentCard.name();
-        this.agentId = this.name;
+        this.agentCard = DefaultA2AClientBuilder.agentCard(a2aServerUrl);
+        this.agentId = this.name = this.agentCard.name();
         this.agentServiceClass = agentServiceClass;
     }
 
     private Client buildClient() {
         try {
-            ClientBuilder cb = Client.builder(agentCard);
-            if (clientCustomizer != null) {
-                clientCustomizer.accept(cb);
+            ClientBuilder cb = Client.builder((AgentCard)this.agentCard);
+            if (this.clientCustomizer != null) {
+                this.clientCustomizer.accept(cb);
             } else {
-                cb.withTransport(JSONRPCTransport.class, new JSONRPCTransportConfigBuilder());
+                cb.withTransport(JSONRPCTransport.class, (ClientTransportConfigBuilder)new JSONRPCTransportConfigBuilder());
             }
             return cb.build();
-        } catch (A2AClientException e) {
+        }
+        catch (A2AClientException e) {
             throw new RuntimeException(e);
         }
     }
 
     private static AgentCard agentCard(String a2aServerUrl) {
         try {
-            return A2A.getAgentCard(a2aServerUrl);
-        } catch (A2AClientError e) {
+            return A2A.getAgentCard((String)a2aServerUrl);
+        }
+        catch (A2AClientError e) {
             throw new RuntimeException(e);
         }
     }
 
-    @Override
     public T build() {
-        if (agentServiceClass == UntypedAgent.class && inputKeys == null) {
+        if (this.agentServiceClass == UntypedAgent.class && this.inputKeys == null) {
             throw new IllegalArgumentException("Input names must be provided for UntypedAgent.");
         }
-
-        this.a2aClient = buildClient();
-
-        Object agent = Proxy.newProxyInstance(
-                agentServiceClass.getClassLoader(), new Class<?>[] {agentServiceClass, A2AClientInstance.class}, this);
-
-        return (T) agent;
+        this.a2aClient = this.buildClient();
+        Object agent = Proxy.newProxyInstance(this.agentServiceClass.getClassLoader(), new Class[]{this.agentServiceClass, A2AClientInstance.class}, this);
+        return (T)agent;
     }
 
     @Override
@@ -174,39 +155,30 @@ public class DefaultA2AClientBuilder<T> implements A2AClientBuilder<T>, Internal
         if (method.getDeclaringClass() == AgentInstance.class || method.getDeclaringClass() == InternalAgent.class) {
             return method.invoke(Proxy.getInvocationHandler(proxy), args);
         }
-
         if (method.getDeclaringClass() == A2AClientInstance.class) {
             return switch (method.getName()) {
-                case "agentCard" -> agentCard;
-                case "inputKeys" -> inputKeys;
-                default ->
-                    throw new UnsupportedOperationException(
-                            "Unknown method on A2AClientInstance class : " + method.getName());
+                case "agentCard" -> this.agentCard;
+                case "inputKeys" -> this.inputKeys;
+                default -> throw new UnsupportedOperationException("Unknown method on A2AClientInstance class : " + method.getName());
             };
         }
-
         boolean wrapWithScope = method.getReturnType() == ResultWithAgenticScope.class;
-        Type returnType = wrapWithScope ? unwrapResultType(method.getGenericReturnType()) : getReturnType(method);
-
-        A2AInvocationResult result = invokeAgent(method, returnType, args);
-
-        AgenticScope scope = LangChain4jManaged.current(AgenticScope.class);
+        Type returnType = wrapWithScope ? DefaultA2AClientBuilder.unwrapResultType(method.getGenericReturnType()) : DefaultA2AClientBuilder.getReturnType(method);
+        A2AInvocationResult result = this.invokeAgent(method, returnType, args);
+        AgenticScope scope = (AgenticScope)LangChain4jManaged.current(AgenticScope.class);
         if (scope == null) {
             scope = DefaultAgenticScope.ephemeralAgenticScope();
-            if (outputKey != null && result.parsedResult != null) {
-                scope.writeState(outputKey, result.parsedResult);
+            if (this.outputKey != null && result.parsedResult != null) {
+                scope.writeState(this.outputKey, result.parsedResult);
             }
         }
         if (result.contextIdKey != null && result.contextId != null) {
-            scope.writeState(result.contextIdKey, result.contextId);
+            scope.writeState(result.contextIdKey, (Object)result.contextId);
         }
         if (result.taskIdKey != null && result.taskId != null) {
-            scope.writeState(result.taskIdKey, result.taskId);
+            scope.writeState(result.taskIdKey, (Object)result.taskId);
         }
-
-        return method.getReturnType() == ResultWithAgenticScope.class
-                ? new ResultWithAgenticScope<>(scope, result.parsedResult)
-                : result.parsedResult;
+        return method.getReturnType() == ResultWithAgenticScope.class ? new ResultWithAgenticScope(scope, result.parsedResult) : result.parsedResult;
     }
 
     private static Type getReturnType(Method method) {
@@ -215,7 +187,8 @@ public class DefaultA2AClientBuilder<T> implements A2AClientBuilder<T>, Internal
     }
 
     private static Type unwrapResultType(Type type) {
-        if (type instanceof ParameterizedType pt && pt.getRawType() == ResultWithAgenticScope.class) {
+        ParameterizedType pt;
+        if (type instanceof ParameterizedType && (pt = (ParameterizedType)type).getRawType() == ResultWithAgenticScope.class) {
             Type inner = pt.getActualTypeArguments()[0];
             return inner == Object.class ? String.class : inner;
         }
@@ -223,38 +196,35 @@ public class DefaultA2AClientBuilder<T> implements A2AClientBuilder<T>, Internal
     }
 
     private A2AInvocationResult invokeAgent(Method method, Type returnType, Object[] args) throws A2AClientException {
-        List<Part<?>> parts = new ArrayList<>();
+        ArrayList<TextPart> parts = new ArrayList<TextPart>();
         String contextId = null;
         String taskId = null;
         String contextIdKey = null;
         String taskIdKey = null;
-
-        if (agentServiceClass == UntypedAgent.class) {
-            Map<String, Object> params = (Map<String, Object>) args[0];
-            for (String inputKey : inputKeys) {
+        if (this.agentServiceClass == UntypedAgent.class) {
+            Map params = (Map)args[0];
+            for (String inputKey : this.inputKeys) {
                 parts.add(new TextPart(params.get(inputKey).toString()));
             }
         } else {
-            java.lang.reflect.Parameter[] parameters = method.getParameters();
-            for (int i = 0; i < args.length; i++) {
+            Parameter[] parameters = method.getParameters();
+            for (int i = 0; i < args.length; ++i) {
                 if (parameters[i].getAnnotation(A2AContextId.class) != null) {
-                    contextId = args[i] != null ? args[i].toString() : null;
-                    if (ParameterNameResolver.hasName(parameters[i])) {
-                        contextIdKey = ParameterNameResolver.name(parameters[i]);
-                    }
-                } else if (parameters[i].getAnnotation(A2ATaskId.class) != null) {
-                    taskId = args[i] != null ? args[i].toString() : null;
-                    if (ParameterNameResolver.hasName(parameters[i])) {
-                        taskIdKey = ParameterNameResolver.name(parameters[i]);
-                    }
-                } else {
-                    parts.add(new TextPart(args[i].toString()));
+                    String string = contextId = args[i] != null ? args[i].toString() : null;
+                    if (!ParameterNameResolver.hasName((Parameter)parameters[i])) continue;
+                    contextIdKey = ParameterNameResolver.name((Parameter)parameters[i]);
+                    continue;
                 }
+                if (parameters[i].getAnnotation(A2ATaskId.class) != null) {
+                    String string = taskId = args[i] != null ? args[i].toString() : null;
+                    if (!ParameterNameResolver.hasName((Parameter)parameters[i])) continue;
+                    taskIdKey = ParameterNameResolver.name((Parameter)parameters[i]);
+                    continue;
+                }
+                parts.add(new TextPart(args[i].toString()));
             }
         }
-
-        Message.Builder messageBuilder =
-                Message.builder().role(Message.Role.ROLE_USER).parts(parts);
+        Message.Builder messageBuilder = Message.builder().role(Message.Role.ROLE_USER).parts(parts);
         if (contextId != null) {
             messageBuilder.contextId(contextId);
         }
@@ -262,52 +232,52 @@ public class DefaultA2AClientBuilder<T> implements A2AClientBuilder<T>, Internal
             messageBuilder.taskId(taskId);
         }
         Message message = messageBuilder.build();
-
-        final CompletableFuture<String> messageResponse = new CompletableFuture<>();
-        AtomicReference<String> responseContextId = new AtomicReference<>();
-        AtomicReference<String> responseTaskId = new AtomicReference<>();
-
-        List<BiConsumer<ClientEvent, AgentCard>> consumers = Collections.singletonList((event, card) -> {
-            if (event instanceof MessageEvent messageEvent) {
+        CompletableFuture messageResponse = new CompletableFuture();
+        AtomicReference responseContextId = new AtomicReference();
+        AtomicReference responseTaskId = new AtomicReference();
+        List consumers = List.of((event, card) -> {
+            if (event instanceof MessageEvent) {
+                MessageEvent messageEvent = (MessageEvent)event;
                 Message msg = messageEvent.getMessage();
                 responseContextId.set(msg.contextId());
                 responseTaskId.set(msg.taskId());
-                messageResponse.complete(extractTextFromParts(msg.parts()));
-            } else if (event instanceof TaskEvent taskEvent) {
-                captureTaskIds(taskEvent.getTask(), responseContextId, responseTaskId);
-                completeFromTask(taskEvent.getTask(), messageResponse);
-            } else if (event instanceof TaskUpdateEvent updateEvent) {
-                captureTaskIds(updateEvent.getTask(), responseContextId, responseTaskId);
-                completeFromTask(updateEvent.getTask(), messageResponse);
+                messageResponse.complete(DefaultA2AClientBuilder.extractTextFromParts(msg.parts()));
+            } else if (event instanceof TaskEvent) {
+                TaskEvent taskEvent = (TaskEvent)event;
+                DefaultA2AClientBuilder.captureTaskIds(taskEvent.getTask(), responseContextId, responseTaskId);
+                DefaultA2AClientBuilder.completeFromTask(taskEvent.getTask(), messageResponse);
+            } else if (event instanceof TaskUpdateEvent) {
+                TaskUpdateEvent updateEvent = (TaskUpdateEvent)event;
+                DefaultA2AClientBuilder.captureTaskIds(updateEvent.getTask(), responseContextId, responseTaskId);
+                DefaultA2AClientBuilder.completeFromTask(updateEvent.getTask(), messageResponse);
             } else {
-                messageResponse.completeExceptionally(
-                        new IllegalArgumentException("The event expected should be of type " + event.getClass()));
+                messageResponse.completeExceptionally(new IllegalArgumentException("The event expected should be of type " + event.getClass()));
             }
         });
         Consumer<Throwable> streamingErrorHandler = error -> {
             if (messageResponse.isDone()) {
-                LOG.debug("SSE stream closed after response received: {}", error.getMessage());
+                LOG.debug("SSE stream closed after response received: {}", (Object)error.getMessage());
             } else {
-                LOG.error("Streaming error occurred: {}", error.getMessage(), error);
-                messageResponse.completeExceptionally(error);
+                LOG.error("Streaming error occurred: {}", (Object)error.getMessage(), error);
+                messageResponse.completeExceptionally((Throwable)error);
             }
         };
-        a2aClient.sendMessage(message, consumers, streamingErrorHandler, null);
-
+        this.a2aClient.sendMessage(message, consumers, streamingErrorHandler, null);
         String finalContextIdKey = contextIdKey;
         String finalTaskIdKey = taskIdKey;
         try {
-            String responseText = messageResponse.get();
-            LOG.debug("Response: {}", responseText);
-            Object parsedResult = serviceOutputParser.parseText(returnType, responseText);
-            return new A2AInvocationResult(
-                    parsedResult, finalContextIdKey, responseContextId.get(), finalTaskIdKey, responseTaskId.get());
-        } catch (InterruptedException e) {
+            String responseText = (String)messageResponse.get();
+            LOG.debug("Response: {}", (Object)responseText);
+            Object parsedResult = this.serviceOutputParser.parseText(returnType, responseText);
+            return new A2AInvocationResult(parsedResult, finalContextIdKey, (String)responseContextId.get(), finalTaskIdKey, (String)responseTaskId.get());
+        }
+        catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-            LOG.error("Failed to get response: {}", e.getMessage(), e);
+            LOG.error("Failed to get response: {}", (Object)e.getMessage(), (Object)e);
             throw new RuntimeException("Failed to get response: " + e.getMessage(), e);
-        } catch (ExecutionException e) {
-            LOG.error("Failed to get response: {}", e.getMessage(), e);
+        }
+        catch (ExecutionException e) {
+            LOG.error("Failed to get response: {}", (Object)e.getMessage(), (Object)e);
             throw new RuntimeException("Failed to get response: " + e.getMessage(), e);
         }
     }
@@ -319,153 +289,124 @@ public class DefaultA2AClientBuilder<T> implements A2AClientBuilder<T>, Internal
 
     static void completeFromTask(Task task, CompletableFuture<String> messageResponse) {
         TaskState state = task.status().state();
-        if (!isTerminalState(state) && task.artifacts().isEmpty()) {
+        if (!DefaultA2AClientBuilder.isTerminalState(state) && task.artifacts().isEmpty()) {
             return;
         }
-        if (isFailureState(state)) {
+        if (DefaultA2AClientBuilder.isFailureState(state)) {
             Message statusMessage = task.status().message();
-            String reason = statusMessage != null ? extractTextFromParts(statusMessage.parts()) : "";
-            messageResponse.completeExceptionally(new RuntimeException("A2A task " + task.id()
-                    + " ended in terminal state " + state + (reason.isEmpty() ? "" : ": " + reason)));
+            String reason = statusMessage != null ? DefaultA2AClientBuilder.extractTextFromParts(statusMessage.parts()) : "";
+            messageResponse.completeExceptionally(new RuntimeException("A2A task " + task.id() + " ended in terminal state " + state + (String)(reason.isEmpty() ? "" : ": " + reason)));
             return;
         }
-        messageResponse.complete(extractTextFromParts(
-                task.artifacts().stream().flatMap(a -> a.parts().stream()).collect(Collectors.toList())));
+        messageResponse.complete(DefaultA2AClientBuilder.extractTextFromParts(task.artifacts().stream().flatMap(a -> a.parts().stream()).toList()));
     }
 
     private static boolean isFailureState(TaskState state) {
-        return state == TaskState.TASK_STATE_FAILED
-                || state == TaskState.TASK_STATE_CANCELED
-                || state == TaskState.TASK_STATE_REJECTED;
+        return state == TaskState.TASK_STATE_FAILED || state == TaskState.TASK_STATE_CANCELED || state == TaskState.TASK_STATE_REJECTED;
     }
 
     private static boolean isTerminalState(TaskState state) {
-        return state == TaskState.TASK_STATE_COMPLETED
-                || state == TaskState.TASK_STATE_FAILED
-                || state == TaskState.TASK_STATE_CANCELED
-                || state == TaskState.TASK_STATE_REJECTED;
+        return state == TaskState.TASK_STATE_COMPLETED || state == TaskState.TASK_STATE_FAILED || state == TaskState.TASK_STATE_CANCELED || state == TaskState.TASK_STATE_REJECTED;
     }
 
     private static String extractTextFromParts(List<Part<?>> parts) {
-        return parts.stream()
-                .filter(TextPart.class::isInstance)
-                .map(TextPart.class::cast)
-                .map(TextPart::text)
-                .collect(Collectors.joining("\n"));
+        return parts.stream().filter(TextPart.class::isInstance).map(TextPart.class::cast).map(TextPart::text).collect(Collectors.joining("\n"));
     }
 
-    @Override
-    public DefaultA2AClientBuilder<T> inputKeys(String... inputKeys) {
+    public DefaultA2AClientBuilder<T> inputKeys(String ... inputKeys) {
         this.inputKeys = inputKeys;
         return this;
     }
 
-    @Override
     public DefaultA2AClientBuilder<T> outputKey(String outputKey) {
         this.outputKey = outputKey;
         return this;
     }
 
-    @Override
     public DefaultA2AClientBuilder<T> async(boolean async) {
         this.async = async;
         return this;
     }
 
-    @Override
     public DefaultA2AClientBuilder<T> listener(AgentListener agentListener) {
         this.agentListener = agentListener;
         return this;
     }
 
-    @Override
-    @SuppressWarnings("unchecked")
     public DefaultA2AClientBuilder<T> clientCustomizer(Consumer<?> clientCustomizer) {
         if (clientCustomizer != null) {
-            this.clientCustomizer = (Consumer<ClientBuilder>) clientCustomizer;
+            this.clientCustomizer = clientCustomizer;
         }
         return this;
     }
 
-    @Override
     public void setParent(InternalAgent parent) {
         this.parent = parent;
     }
 
-    @Override
     public void registerInheritedParentListener(AgentListener parentListener) {
         if (parentListener != null && parentListener.inheritedBySubagents()) {
-            agentListener = composeWithInherited(listener(), parentListener);
+            this.agentListener = ComposedAgentListener.composeWithInherited((AgentListener)this.listener(), (AgentListener)parentListener);
         }
     }
 
-    @Override
     public void appendId(String idSuffix) {
         this.agentId = this.agentId + idSuffix;
     }
 
-    @Override
     public AgentListener listener() {
-        return agentListener;
+        return this.agentListener;
     }
 
-    @Override
     public Class<?> type() {
-        return agentServiceClass;
+        return this.agentServiceClass;
     }
 
-    @Override
     public Class<? extends Planner> plannerType() {
         return null;
     }
 
-    @Override
     public String name() {
-        return name;
+        return this.name;
     }
 
-    @Override
     public String agentId() {
-        return agentId;
+        return this.agentId;
     }
 
-    @Override
     public String description() {
-        return agentCard.description();
+        return this.agentCard.description();
     }
 
-    @Override
     public Type outputType() {
         return Object.class;
     }
 
-    @Override
     public String outputKey() {
-        return outputKey;
+        return this.outputKey;
     }
 
-    @Override
     public boolean async() {
-        return async;
+        return this.async;
     }
 
-    @Override
     public List<AgentArgument> arguments() {
-        return Collections.emptyList();
+        return List.of();
     }
 
-    @Override
     public AgentInstance parent() {
-        return parent;
+        return this.parent;
     }
 
-    @Override
     public List<AgentInstance> subagents() {
-        return Collections.emptyList();
+        return List.of();
     }
 
-    @Override
     public AgenticSystemTopology topology() {
         return AgenticSystemTopology.AI_AGENT;
     }
+
+    private record A2AInvocationResult(Object parsedResult, String contextIdKey, String contextId, String taskIdKey, String taskId) {
+    }
 }
+
