@@ -1,19 +1,33 @@
+/*
+ * Decompiled with CFR 0.152.
+ * 
+ * Could not load the following classes:
+ *  dev.langchain4j.agent.tool.ToolExecutionRequest
+ *  dev.langchain4j.http.client.HttpClient
+ *  dev.langchain4j.http.client.HttpClientBuilder
+ *  dev.langchain4j.http.client.HttpClientBuilderLoader
+ *  dev.langchain4j.http.client.HttpMethod
+ *  dev.langchain4j.http.client.HttpRequest
+ *  dev.langchain4j.http.client.HttpRequest$Builder
+ *  dev.langchain4j.http.client.log.LoggingHttpClient
+ *  dev.langchain4j.http.client.sse.CancellationUnsupportedHandle
+ *  dev.langchain4j.http.client.sse.ServerSentEvent
+ *  dev.langchain4j.http.client.sse.ServerSentEventContext
+ *  dev.langchain4j.http.client.sse.ServerSentEventListener
+ *  dev.langchain4j.http.client.sse.ServerSentEventParsingHandle
+ *  dev.langchain4j.http.client.sse.ServerSentEventParsingHandleUtils
+ *  dev.langchain4j.internal.ExceptionMapper
+ *  dev.langchain4j.internal.InternalStreamingChatResponseHandlerUtils
+ *  dev.langchain4j.internal.MappingTrackingStreamingChatResponseHandler
+ *  dev.langchain4j.internal.Utils
+ *  dev.langchain4j.model.chat.response.ChatResponse
+ *  dev.langchain4j.model.chat.response.CompleteToolCall
+ *  dev.langchain4j.model.chat.response.StreamingChatResponseHandler
+ *  dev.langchain4j.model.chat.response.StreamingHandle
+ *  org.jspecify.annotations.Nullable
+ *  org.slf4j.Logger
+ */
 package dev.langchain4j.model.googleai;
-
-import static dev.langchain4j.http.client.HttpMethod.DELETE;
-import static dev.langchain4j.http.client.HttpMethod.GET;
-import static dev.langchain4j.http.client.HttpMethod.POST;
-import static dev.langchain4j.http.client.sse.ServerSentEventParsingHandleUtils.toStreamingHandle;
-import static dev.langchain4j.internal.InternalStreamingChatResponseHandlerUtils.onCompleteResponse;
-import static dev.langchain4j.internal.InternalStreamingChatResponseHandlerUtils.onCompleteToolCall;
-import static dev.langchain4j.internal.InternalStreamingChatResponseHandlerUtils.onPartialResponse;
-import static dev.langchain4j.internal.InternalStreamingChatResponseHandlerUtils.onPartialThinking;
-import static dev.langchain4j.internal.InternalStreamingChatResponseHandlerUtils.onUnmappedRawEvent;
-import static dev.langchain4j.internal.InternalStreamingChatResponseHandlerUtils.withLoggingExceptions;
-import static dev.langchain4j.internal.Utils.firstNotNull;
-import static dev.langchain4j.internal.Utils.getOrDefault;
-import static dev.langchain4j.model.googleai.Json.fromJson;
-import static java.time.Duration.ofSeconds;
 
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
 import dev.langchain4j.http.client.HttpClient;
@@ -26,269 +40,183 @@ import dev.langchain4j.http.client.sse.CancellationUnsupportedHandle;
 import dev.langchain4j.http.client.sse.ServerSentEvent;
 import dev.langchain4j.http.client.sse.ServerSentEventContext;
 import dev.langchain4j.http.client.sse.ServerSentEventListener;
+import dev.langchain4j.http.client.sse.ServerSentEventParsingHandle;
+import dev.langchain4j.http.client.sse.ServerSentEventParsingHandleUtils;
 import dev.langchain4j.internal.ExceptionMapper;
+import dev.langchain4j.internal.InternalStreamingChatResponseHandlerUtils;
 import dev.langchain4j.internal.MappingTrackingStreamingChatResponseHandler;
+import dev.langchain4j.internal.Utils;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import dev.langchain4j.model.chat.response.CompleteToolCall;
 import dev.langchain4j.model.chat.response.StreamingChatResponseHandler;
 import dev.langchain4j.model.chat.response.StreamingHandle;
-import dev.langchain4j.model.googleai.BatchRequestResponse.ListOperationsResponse;
-import dev.langchain4j.model.googleai.GeminiEmbeddingRequestResponse.GeminiBatchEmbeddingRequest;
-import dev.langchain4j.model.googleai.GeminiEmbeddingRequestResponse.GeminiBatchEmbeddingResponse;
-import dev.langchain4j.model.googleai.GeminiEmbeddingRequestResponse.GeminiEmbeddingRequest;
-import dev.langchain4j.model.googleai.GeminiEmbeddingRequestResponse.GeminiEmbeddingResponse;
+import dev.langchain4j.model.googleai.BatchRequestResponse;
+import dev.langchain4j.model.googleai.GeminiCountTokensRequest;
+import dev.langchain4j.model.googleai.GeminiCountTokensResponse;
+import dev.langchain4j.model.googleai.GeminiEmbeddingRequestResponse;
+import dev.langchain4j.model.googleai.GeminiGenerateContentRequest;
+import dev.langchain4j.model.googleai.GeminiGenerateContentResponse;
+import dev.langchain4j.model.googleai.GeminiModelsListResponse;
+import dev.langchain4j.model.googleai.GeminiStreamingResponseBuilder;
+import dev.langchain4j.model.googleai.Json;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 
 class GeminiService {
-
     private static final String GEMINI_AI_ENDPOINT = "https://generativelanguage.googleapis.com/v1beta";
     private static final String API_KEY_HEADER_NAME = "x-goog-api-key";
-    private static final Duration DEFAULT_CONNECT_TIMEOUT = ofSeconds(15);
-    private static final Duration DEFAULT_READ_TIMEOUT = ofSeconds(60);
-
+    private static final Duration DEFAULT_CONNECT_TIMEOUT = Duration.ofSeconds(15L);
+    private static final Duration DEFAULT_READ_TIMEOUT = Duration.ofSeconds(60L);
     private final HttpClient httpClient;
     private final String baseUrl;
     private final String apiKey;
     private final Supplier<Map<String, String>> customHeadersSupplier;
 
-    enum BatchOperationType {
-        BATCH_GENERATE_CONTENT("batchGenerateContent"),
-        ASYNC_BATCH_EMBED_CONTENT("asyncBatchEmbedContent");
-
-        private final String value;
-
-        BatchOperationType(String value) {
-            this.value = value;
-        }
-
-        public String getValue() {
-            return value;
-        }
-    }
-
-    GeminiService(
-            final @Nullable HttpClientBuilder httpClientBuilder,
-            final String apiKey,
-            final String baseUrl,
-            final boolean logRequestsAndResponses,
-            final boolean logRequests,
-            final boolean logResponses,
-            final Logger logger,
-            final Duration timeout,
-            final @Nullable Supplier<Map<String, String>> customHeadersSupplier) {
+    GeminiService(@Nullable HttpClientBuilder httpClientBuilder, String apiKey, String baseUrl, boolean logRequestsAndResponses, boolean logRequests, boolean logResponses, Logger logger, Duration timeout, @Nullable Supplier<Map<String, String>> customHeadersSupplier) {
         this.apiKey = apiKey;
-        this.baseUrl = getOrDefault(baseUrl, GeminiService.GEMINI_AI_ENDPOINT);
+        this.baseUrl = (String)Utils.getOrDefault((Object)baseUrl, (Object)GEMINI_AI_ENDPOINT);
         this.customHeadersSupplier = customHeadersSupplier;
-        final HttpClientBuilder builder = getOrDefault(httpClientBuilder, HttpClientBuilderLoader::loadHttpClientBuilder);
-        HttpClient httpClient = builder.connectTimeout(
-                        firstNotNull("connectTimeout", timeout, builder.connectTimeout(), DEFAULT_CONNECT_TIMEOUT))
-                .readTimeout(firstNotNull("readTimeout", timeout, builder.readTimeout(), DEFAULT_READ_TIMEOUT))
-                .build();
-
-        if (logRequestsAndResponses || logResponses || logRequests) {
-            this.httpClient = new LoggingHttpClient(
-                    httpClient,
-                    logRequestsAndResponses || logRequests,
-                    logRequestsAndResponses || logResponses,
-                    logger);
-        } else {
-            this.httpClient = httpClient;
-        }
+        HttpClientBuilder builder = (HttpClientBuilder)Utils.getOrDefault((Object)httpClientBuilder, HttpClientBuilderLoader::loadHttpClientBuilder);
+        HttpClient httpClient = builder.connectTimeout((Duration)Utils.firstNotNull((String)"connectTimeout", (Object[])new Duration[]{timeout, builder.connectTimeout(), DEFAULT_CONNECT_TIMEOUT})).readTimeout((Duration)Utils.firstNotNull((String)"readTimeout", (Object[])new Duration[]{timeout, builder.readTimeout(), DEFAULT_READ_TIMEOUT})).build();
+        this.httpClient = logRequestsAndResponses || logResponses || logRequests ? new LoggingHttpClient(httpClient, Boolean.valueOf(logRequestsAndResponses || logRequests), Boolean.valueOf(logRequestsAndResponses || logResponses), logger) : httpClient;
     }
 
     GeminiGenerateContentResponse generateContent(String modelName, GeminiGenerateContentRequest request) {
-        String url = String.format("%s/models/%s:generateContent", baseUrl, modelName);
-        return sendRequest(url, apiKey, request, GeminiGenerateContentResponse.class);
+        String url = String.format("%s/models/%s:generateContent", this.baseUrl, modelName);
+        return this.sendRequest(url, this.apiKey, request, GeminiGenerateContentResponse.class);
     }
 
-    @SuppressWarnings("unchecked")
-    <REQ, RESP> BatchRequestResponse.Operation<RESP> batchCreate(
-            String modelName, BatchRequestResponse.BatchCreateRequest<REQ> request, BatchOperationType operationType) {
-        return (BatchRequestResponse.Operation<RESP>) sendRequest(
-                String.format("%s/models/%s:%s", baseUrl, modelName, operationType.value),
-                apiKey,
-                request,
-                BatchRequestResponse.Operation.class);
+    <REQ, RESP> BatchRequestResponse.Operation<RESP> batchCreate(String modelName, BatchRequestResponse.BatchCreateRequest<REQ> request, BatchOperationType operationType) {
+        return this.sendRequest(String.format("%s/models/%s:%s", this.baseUrl, modelName, operationType.value), this.apiKey, request, BatchRequestResponse.Operation.class);
     }
 
-    <REQ, RESP> BatchRequestResponse.Operation<RESP> batchCreate(
-            String modelName, BatchRequestResponse.BatchCreateFileRequest request, BatchOperationType operationType) {
-        return (BatchRequestResponse.Operation<RESP>) sendRequest(
-                String.format("%s/models/%s:%s", baseUrl, modelName, operationType.value),
-                apiKey,
-                request,
-                BatchRequestResponse.Operation.class);
+    <REQ, RESP> BatchRequestResponse.Operation<RESP> batchCreate(String modelName, BatchRequestResponse.BatchCreateFileRequest request, BatchOperationType operationType) {
+        return this.sendRequest(String.format("%s/models/%s:%s", this.baseUrl, modelName, operationType.value), this.apiKey, request, BatchRequestResponse.Operation.class);
     }
 
-    @SuppressWarnings("unchecked")
     <RESP> BatchRequestResponse.Operation<RESP> batchRetrieveBatch(String operationName) {
-        return (BatchRequestResponse.Operation<RESP>) sendRequest(
-                String.format("%s/%s", baseUrl, operationName),
-                apiKey,
-                null,
-                BatchRequestResponse.Operation.class,
-                GET);
+        return this.sendRequest(String.format("%s/%s", this.baseUrl, operationName), this.apiKey, null, BatchRequestResponse.Operation.class, HttpMethod.GET);
     }
 
     Void batchCancelBatch(String operationName) {
-        String url = String.format("%s/%s:cancel", baseUrl, operationName);
-        return sendRequest(url, apiKey, null, Void.class);
+        String url = String.format("%s/%s:cancel", this.baseUrl, operationName);
+        return this.sendRequest(url, this.apiKey, null, Void.class);
     }
 
     Void batchDeleteBatch(String batchName) {
-        String url = String.format("%s/%s", baseUrl, batchName);
-        return sendRequest(url, apiKey, null, Void.class, DELETE);
+        String url = String.format("%s/%s", this.baseUrl, batchName);
+        return this.sendRequest(url, this.apiKey, null, Void.class, HttpMethod.DELETE);
     }
 
-    @SuppressWarnings("unchecked")
-    <RESP> ListOperationsResponse<RESP> batchListBatches(@Nullable Integer pageSize, @Nullable String pageToken) {
-        String url = buildUrl(
-                baseUrl + "/batches",
-                new StringPair("pageSize", pageSize != null ? String.valueOf(pageSize) : null),
-                new StringPair("pageToken", pageToken));
-        return sendRequest(url, apiKey, null, ListOperationsResponse.class, GET);
+    <RESP> BatchRequestResponse.ListOperationsResponse<RESP> batchListBatches(@Nullable Integer pageSize, @Nullable String pageToken) {
+        String url = GeminiService.buildUrl(this.baseUrl + "/batches", new StringPair("pageSize", pageSize != null ? String.valueOf(pageSize) : null), new StringPair("pageToken", pageToken));
+        return this.sendRequest(url, this.apiKey, null, BatchRequestResponse.ListOperationsResponse.class, HttpMethod.GET);
     }
 
     GeminiCountTokensResponse countTokens(String modelName, GeminiCountTokensRequest request) {
-        String url = String.format("%s/models/%s:countTokens", baseUrl, modelName);
-        return sendRequest(url, apiKey, request, GeminiCountTokensResponse.class);
+        String url = String.format("%s/models/%s:countTokens", this.baseUrl, modelName);
+        return this.sendRequest(url, this.apiKey, request, GeminiCountTokensResponse.class);
     }
 
-    GeminiEmbeddingResponse embed(String modelName, GeminiEmbeddingRequest request) {
-        String url = String.format("%s/models/%s:embedContent", baseUrl, modelName);
-        return sendRequest(url, apiKey, request, GeminiEmbeddingResponse.class);
+    GeminiEmbeddingRequestResponse.GeminiEmbeddingResponse embed(String modelName, GeminiEmbeddingRequestResponse.GeminiEmbeddingRequest request) {
+        String url = String.format("%s/models/%s:embedContent", this.baseUrl, modelName);
+        return this.sendRequest(url, this.apiKey, request, GeminiEmbeddingRequestResponse.GeminiEmbeddingResponse.class);
     }
 
-    GeminiBatchEmbeddingResponse batchEmbed(String modelName, GeminiBatchEmbeddingRequest request) {
-        String url = String.format("%s/models/%s:batchEmbedContents", baseUrl, modelName);
-        return sendRequest(url, apiKey, request, GeminiBatchEmbeddingResponse.class);
+    GeminiEmbeddingRequestResponse.GeminiBatchEmbeddingResponse batchEmbed(String modelName, GeminiEmbeddingRequestResponse.GeminiBatchEmbeddingRequest request) {
+        String url = String.format("%s/models/%s:batchEmbedContents", this.baseUrl, modelName);
+        return this.sendRequest(url, this.apiKey, request, GeminiEmbeddingRequestResponse.GeminiBatchEmbeddingResponse.class);
     }
 
     GeminiModelsListResponse listModels(@Nullable Integer pageSize, @Nullable String pageToken) {
-        String url = buildUrl(
-                baseUrl + "/models",
-                new StringPair("pageSize", pageSize != null ? String.valueOf(pageSize) : null),
-                new StringPair("pageToken", pageToken));
-        return sendRequest(url, apiKey, null, GeminiModelsListResponse.class, GET);
+        String url = GeminiService.buildUrl(this.baseUrl + "/models", new StringPair("pageSize", pageSize != null ? String.valueOf(pageSize) : null), new StringPair("pageToken", pageToken));
+        return this.sendRequest(url, this.apiKey, null, GeminiModelsListResponse.class, HttpMethod.GET);
     }
 
-    void generateContentStream(
-            String modelName,
-            GeminiGenerateContentRequest request,
-            boolean includeCodeExecutionOutput,
-            Boolean returnThinking,
-            StreamingChatResponseHandler handler) {
-        String url = String.format("%s/models/%s:streamGenerateContent?alt=sse", baseUrl, modelName);
-        streamRequest(url, apiKey, request, includeCodeExecutionOutput, returnThinking, handler);
+    void generateContentStream(String modelName, GeminiGenerateContentRequest request, boolean includeCodeExecutionOutput, Boolean returnThinking, StreamingChatResponseHandler handler) {
+        String url = String.format("%s/models/%s:streamGenerateContent?alt=sse", this.baseUrl, modelName);
+        this.streamRequest(url, this.apiKey, request, includeCodeExecutionOutput, returnThinking, handler);
     }
 
     private <T> T sendRequest(String url, String apiKey, @Nullable Object requestBody, Class<T> responseType) {
-        return sendRequest(url, apiKey, requestBody, responseType, POST);
+        return this.sendRequest(url, apiKey, requestBody, responseType, HttpMethod.POST);
     }
 
-    private <T> T sendRequest(
-            String url, String apiKey, @Nullable Object requestBody, Class<T> responseType, HttpMethod httpMethod) {
-        HttpRequest request = buildHttpRequest(url, apiKey, requestBody, httpMethod);
-        return fromJson(httpClient.execute(request).body(), responseType);
+    private <T> T sendRequest(String url, String apiKey, @Nullable Object requestBody, Class<T> responseType, HttpMethod httpMethod) {
+        HttpRequest request = this.buildHttpRequest(url, apiKey, requestBody, httpMethod);
+        return Json.fromJson(this.httpClient.execute(request).body(), responseType);
     }
 
-    private void streamRequest(
-            String url,
-            String apiKey,
-            Object requestBody,
-            boolean includeCodeExecutionOutput,
-            Boolean returnThinking,
-            StreamingChatResponseHandler handler) {
-        HttpRequest httpRequest = buildHttpRequest(url, apiKey, requestBody, POST);
-
-        GeminiStreamingResponseBuilder responseBuilder =
-                new GeminiStreamingResponseBuilder(includeCodeExecutionOutput, returnThinking);
-
-        StreamingChatResponseHandler targetHandler = handler;
-
-        httpClient.execute(httpRequest, new ServerSentEventListener() {
-
-            final MappingTrackingStreamingChatResponseHandler handler =
-                    new MappingTrackingStreamingChatResponseHandler(targetHandler);
-
-            AtomicInteger toolIndex = new AtomicInteger(0);
+    private void streamRequest(String url, String apiKey, Object requestBody, boolean includeCodeExecutionOutput, final Boolean returnThinking, StreamingChatResponseHandler handler) {
+        HttpRequest httpRequest = this.buildHttpRequest(url, apiKey, requestBody, HttpMethod.POST);
+        final GeminiStreamingResponseBuilder responseBuilder = new GeminiStreamingResponseBuilder(includeCodeExecutionOutput, returnThinking);
+        final StreamingChatResponseHandler targetHandler = handler;
+        this.httpClient.execute(httpRequest, new ServerSentEventListener(){
+            final MappingTrackingStreamingChatResponseHandler handler;
+            AtomicInteger toolIndex;
             volatile StreamingHandle streamingHandle;
-
-            @Override
-            public void onEvent(ServerSentEvent event) {
-                onEvent(event, new ServerSentEventContext(new CancellationUnsupportedHandle()));
+            {
+                this.handler = new MappingTrackingStreamingChatResponseHandler(targetHandler);
+                this.toolIndex = new AtomicInteger(0);
             }
 
-            @Override
+            public void onEvent(ServerSentEvent event) {
+                this.onEvent(event, new ServerSentEventContext((ServerSentEventParsingHandle)new CancellationUnsupportedHandle()));
+            }
+
             public void onEvent(ServerSentEvent event, ServerSentEventContext context) {
-                if (streamingHandle == null) {
-                    streamingHandle = toStreamingHandle(context.parsingHandle());
+                if (this.streamingHandle == null) {
+                    this.streamingHandle = ServerSentEventParsingHandleUtils.toStreamingHandle((ServerSentEventParsingHandle)context.parsingHandle());
                 }
-
-                handler.resetMappingTracking();
-
-                GeminiGenerateContentResponse response = fromJson(event.data(), GeminiGenerateContentResponse.class);
+                this.handler.resetMappingTracking();
+                GeminiGenerateContentResponse response = Json.fromJson(event.data(), GeminiGenerateContentResponse.class);
                 GeminiStreamingResponseBuilder.TextAndTools textAndTools = responseBuilder.append(response);
-                textAndTools.maybeText().ifPresent(text -> {
-                    onPartialResponse(handler, text, streamingHandle);
-                });
+                textAndTools.maybeText().ifPresent(text -> InternalStreamingChatResponseHandlerUtils.onPartialResponse((StreamingChatResponseHandler)this.handler, (String)text, (StreamingHandle)this.streamingHandle));
                 textAndTools.maybeThought().ifPresent(thought -> {
                     if (Boolean.TRUE.equals(returnThinking)) {
-                        onPartialThinking(handler, thought, streamingHandle);
+                        InternalStreamingChatResponseHandlerUtils.onPartialThinking((StreamingChatResponseHandler)this.handler, (String)thought, (StreamingHandle)this.streamingHandle);
                     } else if (returnThinking == null) {
-                        onPartialResponse(handler, thought, streamingHandle); // for backward compatibility
+                        InternalStreamingChatResponseHandlerUtils.onPartialResponse((StreamingChatResponseHandler)this.handler, (String)thought, (StreamingHandle)this.streamingHandle);
                     }
                 });
                 for (ToolExecutionRequest tool : textAndTools.tools()) {
-                    CompleteToolCall completeToolCall = new CompleteToolCall(toolIndex.get(), tool);
-                    onCompleteToolCall(handler, completeToolCall);
-                    toolIndex.incrementAndGet();
+                    CompleteToolCall completeToolCall = new CompleteToolCall(this.toolIndex.get(), tool);
+                    InternalStreamingChatResponseHandlerUtils.onCompleteToolCall((StreamingChatResponseHandler)this.handler, (CompleteToolCall)completeToolCall);
+                    this.toolIndex.incrementAndGet();
                 }
-
-                if (!handler.wasMapped()) {
-                    onUnmappedRawEvent(handler, event);
+                if (!this.handler.wasMapped()) {
+                    InternalStreamingChatResponseHandlerUtils.onUnmappedRawEvent((StreamingChatResponseHandler)this.handler, (Object)event);
                 }
             }
 
-            @Override
             public void onClose() {
-                if (streamingHandle == null || !streamingHandle.isCancelled()) {
+                if (this.streamingHandle == null || !this.streamingHandle.isCancelled()) {
                     ChatResponse completeResponse = responseBuilder.build();
-                    onCompleteResponse(handler, completeResponse);
+                    InternalStreamingChatResponseHandlerUtils.onCompleteResponse((StreamingChatResponseHandler)this.handler, (ChatResponse)completeResponse);
                 }
             }
 
-            @Override
             public void onError(Throwable error) {
                 RuntimeException mappedError = ExceptionMapper.DEFAULT.mapException(error);
-                withLoggingExceptions(() -> handler.onError(mappedError));
+                InternalStreamingChatResponseHandlerUtils.withLoggingExceptions(() -> this.handler.onError((Throwable)mappedError));
             }
         });
     }
 
     private HttpRequest buildHttpRequest(String url, String apiKey, @Nullable Object body, HttpMethod method) {
-        HttpRequest.Builder builder = HttpRequest.builder()
-                .method(method)
-                .url(url)
-                .addHeader("Content-Type", "application/json")
-                .addHeader("User-Agent", "LangChain4j");
+        Map<String, String> customHeaders;
+        HttpRequest.Builder builder = HttpRequest.builder().method(method).url(url).addHeader("Content-Type", new String[]{"application/json"}).addHeader("User-Agent", new String[]{"LangChain4j"});
         if (apiKey != null) {
-            builder.addHeader(API_KEY_HEADER_NAME, apiKey);
+            builder.addHeader(API_KEY_HEADER_NAME, new String[]{apiKey});
         }
-        if (customHeadersSupplier != null) {
-            Map<String, String> customHeaders = customHeadersSupplier.get();
-            if (customHeaders != null) {
-                customHeaders.forEach(builder::addHeader);
-            }
+        if (this.customHeadersSupplier != null && (customHeaders = this.customHeadersSupplier.get()) != null) {
+            customHeaders.forEach((x$0, xva$1) -> builder.addHeader(x$0, new String[]{xva$1}));
         }
         if (body != null) {
             builder.body(Json.toJson(body));
@@ -296,48 +224,55 @@ class GeminiService {
         return builder.build();
     }
 
-    private static String buildUrl(String baseUrl, StringPair... pairs) {
-        String queryParams = Stream.of(pairs)
-                .filter(pair -> pair.value != null)
-                .map(entry -> entry.key() + "=" + URLEncoder.encode(entry.value(), StandardCharsets.UTF_8))
-                .collect(Collectors.joining("&"));
-
+    private static String buildUrl(String baseUrl, StringPair ... pairs) {
+        StringBuilder sb = new StringBuilder();
+        for (StringPair pair : pairs) {
+            if (pair.value() == null) continue;
+            if (sb.length() > 0) {
+                sb.append("&");
+            }
+            try {
+                sb.append(pair.key()).append("=").append(URLEncoder.encode(pair.value(), "UTF-8"));
+            }
+            catch (UnsupportedEncodingException e) {
+                throw new RuntimeException(e);
+            }
+        }
+        String queryParams = sb.toString();
         return queryParams.isEmpty() ? baseUrl : baseUrl + "?" + queryParams;
     }
-    private class StringPair {
+
+    private static final class StringPair {
         private final String key;
         private final @Nullable String value;
 
-        public StringPair(String key, @Nullable String value) {
+        StringPair(String key, @Nullable String value) {
             this.key = key;
             this.value = value;
         }
 
-        public String getKey() {
-            return key;
+        String key() {
+            return this.key;
         }
 
-        public @Nullable String getValue() {
-            return value;
+        @Nullable String value() {
+            return this.value;
+        }
+    }
+
+    static enum BatchOperationType {
+        BATCH_GENERATE_CONTENT("batchGenerateContent"),
+        ASYNC_BATCH_EMBED_CONTENT("asyncBatchEmbedContent");
+
+        private final String value;
+
+        private BatchOperationType(String value) {
+            this.value = value;
         }
 
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (o == null || getClass() != o.getClass()) return false;
-            StringPair that = (StringPair) o;
-            return java.util.Objects.equals(this.key, that.key) && java.util.Objects.equals(this.value, that.value);
+        public String getValue() {
+            return this.value;
         }
-
-        @Override
-        public int hashCode() {
-            return java.util.Objects.hash(key, value);
-        }
-
-        @Override
-        public String toString() {
-            return "StringPair{"key=" + key + , "value=" + value + "}"";
-        }
-
     }
 }
+
