@@ -1,25 +1,31 @@
+/*
+ * Decompiled with CFR 0.152.
+ * 
+ * Could not load the following classes:
+ *  dev.langchain4j.Experimental
+ *  dev.langchain4j.internal.Exceptions
+ *  dev.langchain4j.internal.Utils
+ *  dev.langchain4j.internal.ValidationUtils
+ */
 package dev.langchain4j.http.client;
 
-import static dev.langchain4j.internal.Exceptions.illegalArgument;
-import static dev.langchain4j.internal.Utils.copy;
-import static dev.langchain4j.internal.Utils.isNullOrEmpty;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotEmpty;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
-import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.joining;
-
 import dev.langchain4j.Experimental;
+import dev.langchain4j.http.client.FormDataFile;
+import dev.langchain4j.http.client.HttpMethod;
+import dev.langchain4j.internal.Exceptions;
+import dev.langchain4j.internal.Utils;
+import dev.langchain4j.internal.ValidationUtils;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Collections;
+import java.util.stream.Collectors;
 
 public class HttpRequest {
-
     private final HttpMethod method;
     private final String url;
     private final Map<String, List<String>> headers;
@@ -28,78 +34,75 @@ public class HttpRequest {
     private final String body;
 
     public HttpRequest(Builder builder) {
-        validate(builder);
-        this.method = ensureNotNull(builder.method, "method");
-        this.url = buildUrl(builder);
-        this.headers = copy(builder.headers);
-        this.formDataFields = copy(builder.formDataFields);
-        this.formDataFiles = copy(builder.formDataFiles);
+        HttpRequest.validate(builder);
+        this.method = (HttpMethod)((Object)ValidationUtils.ensureNotNull((Object)((Object)builder.method), (String)"method"));
+        this.url = HttpRequest.buildUrl(builder);
+        this.headers = Utils.copy((Map)builder.headers);
+        this.formDataFields = Utils.copy((Map)builder.formDataFields);
+        this.formDataFiles = Utils.copy((Map)builder.formDataFiles);
         this.body = builder.body;
     }
 
     private static void validate(Builder builder) {
+        boolean hasFormDataFiles;
         boolean hasBody = builder.body != null;
         boolean hasFormDataFields = builder.formDataFields != null && !builder.formDataFields.isEmpty();
-        boolean hasFormDataFiles = builder.formDataFiles != null && !builder.formDataFiles.isEmpty();
+        boolean bl = hasFormDataFiles = builder.formDataFiles != null && !builder.formDataFiles.isEmpty();
         if (hasBody && hasFormDataFields) {
-            throw illegalArgument("Cannot specify both body and formDataFields");
+            throw Exceptions.illegalArgument((String)"Cannot specify both body and formDataFields", (Object[])new Object[0]);
         }
         if (hasBody && hasFormDataFiles) {
-            throw illegalArgument("Cannot specify both body and formDataFiles");
+            throw Exceptions.illegalArgument((String)"Cannot specify both body and formDataFiles", (Object[])new Object[0]);
         }
     }
 
     private static String buildUrl(Builder builder) {
-        String url = ensureNotBlank(builder.url, "url");
-        if (isNullOrEmpty(builder.queryParams)) {
+        String url = ValidationUtils.ensureNotBlank((String)builder.url, (String)"url");
+        if (Utils.isNullOrEmpty((Map)builder.queryParams)) {
             return url;
         }
-
-        String queryString = buildQueryString(builder.queryParams);
+        String queryString = HttpRequest.buildQueryString(builder.queryParams);
         String separator = url.contains("?") ? "&" : "?";
         return url + separator + queryString;
     }
 
     private static String buildQueryString(Map<String, String> queryParams) {
-        return queryParams.entrySet().stream()
-                .map(entry -> encodeQueryParam(entry.getKey()) + "=" + encodeQueryParam(entry.getValue()))
-                .collect(joining("&"));
+        return queryParams.entrySet().stream().map(entry -> HttpRequest.encodeQueryParam((String)entry.getKey()) + "=" + HttpRequest.encodeQueryParam((String)entry.getValue())).collect(Collectors.joining("&"));
     }
 
     private static String encodeQueryParam(String value) {
-        return URLEncoder.encode(value, StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(value, "UTF-8");
+        }
+        catch (UnsupportedEncodingException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public HttpMethod method() {
-        return method;
+        return this.method;
     }
 
     public String url() {
-        return url;
+        return this.url;
     }
 
     public Map<String, List<String>> headers() {
-        return headers;
+        return this.headers;
     }
 
-    /**
-     * @since 1.10.0
-     */
     @Experimental
     public Map<String, String> formDataFields() {
-        return formDataFields;
+        return this.formDataFields;
     }
 
-    /**
-     * @since 1.10.0
-     */
     @Experimental
     public Map<String, FormDataFile> formDataFiles() {
-        return formDataFiles;
+        return this.formDataFiles;
     }
 
     public String body() {
-        return body;
+        return this.body;
     }
 
     public static Builder builder() {
@@ -107,7 +110,6 @@ public class HttpRequest {
     }
 
     public static class Builder {
-
         private HttpMethod method;
         private String url;
         private Map<String, List<String>> headers;
@@ -116,7 +118,8 @@ public class HttpRequest {
         private Map<String, FormDataFile> formDataFiles;
         private String body;
 
-        private Builder() {}
+        private Builder() {
+        }
 
         public Builder method(HttpMethod method) {
             this.method = method;
@@ -129,9 +132,8 @@ public class HttpRequest {
         }
 
         public Builder url(String baseUrl, String path) {
-            ensureNotBlank(baseUrl, "baseUrl");
-            ensureNotBlank(path, "path");
-
+            ValidationUtils.ensureNotBlank((String)baseUrl, (String)"baseUrl");
+            ValidationUtils.ensureNotBlank((String)path, (String)"path");
             if (baseUrl.endsWith("/")) {
                 baseUrl = baseUrl.substring(0, baseUrl.length() - 1);
             }
@@ -142,25 +144,24 @@ public class HttpRequest {
             return this;
         }
 
-        public Builder addHeader(String name, String... values) {
-            ensureNotBlank(name, "name");
-            ensureNotEmpty(values, "values");
-
+        public Builder addHeader(String name, String ... values) {
+            ValidationUtils.ensureNotBlank((String)name, (String)"name");
+            ValidationUtils.ensureNotEmpty((Object[])values, (String)"values");
             if (this.headers == null) {
-                this.headers = new HashMap<>();
+                this.headers = new HashMap<String, List<String>>();
             }
-            this.headers.put(name, asList(values));
+            this.headers.put(name, Arrays.asList(values));
             return this;
         }
 
         public Builder addHeaders(Map<String, String> headers) {
-            if (isNullOrEmpty(headers)) {
+            if (Utils.isNullOrEmpty(headers)) {
                 return this;
             }
             if (this.headers == null) {
-                this.headers = new HashMap<>();
+                this.headers = new HashMap<String, List<String>>();
             }
-            headers.forEach((name, value) -> this.headers.put(name, Collections.singletonList(value)));
+            headers.forEach((name, value) -> this.headers.put((String)name, Collections.singletonList(value)));
             return this;
         }
 
@@ -170,89 +171,63 @@ public class HttpRequest {
         }
 
         public Builder addQueryParam(String name, String value) {
-            ensureNotBlank(name, "name");
-            ensureNotBlank(value, "value");
-
+            ValidationUtils.ensureNotBlank((String)name, (String)"name");
+            ValidationUtils.ensureNotBlank((String)value, (String)"value");
             if (this.queryParams == null) {
-                this.queryParams = new LinkedHashMap<>();
+                this.queryParams = new LinkedHashMap<String, String>();
             }
             this.queryParams.put(name, value);
             return this;
         }
 
         public Builder addQueryParams(Map<String, String> queryParams) {
-            if (isNullOrEmpty(queryParams)) {
+            if (Utils.isNullOrEmpty(queryParams)) {
                 return this;
             }
             if (this.queryParams == null) {
-                this.queryParams = new LinkedHashMap<>();
+                this.queryParams = new LinkedHashMap<String, String>();
             }
             this.queryParams.putAll(queryParams);
             return this;
         }
 
         public Builder queryParams(Map<String, String> queryParams) {
-            if (queryParams == null) {
-                this.queryParams = null;
-            } else {
-                this.queryParams = new LinkedHashMap<>(queryParams);
-            }
+            this.queryParams = queryParams == null ? null : new LinkedHashMap<String, String>(queryParams);
             return this;
         }
 
-        /**
-         * @since 1.10.0
-         */
         @Experimental
         public Builder addFormDataField(String name, String value) {
-            ensureNotBlank(name, "name");
-            ensureNotNull(value, "value");
-
+            ValidationUtils.ensureNotBlank((String)name, (String)"name");
+            ValidationUtils.ensureNotNull((Object)value, (String)"value");
             if (this.formDataFields == null) {
-                this.formDataFields = new LinkedHashMap<>();
+                this.formDataFields = new LinkedHashMap<String, String>();
             }
             this.formDataFields.put(name, value);
             return this;
         }
 
-        /**
-         * @since 1.10.0
-         */
         @Experimental
         public Builder formDataFields(Map<String, String> formDataFields) {
-            if (formDataFields == null) {
-                this.formDataFields = null;
-            } else {
-                this.formDataFields = new LinkedHashMap<>(formDataFields);
-            }
+            this.formDataFields = formDataFields == null ? null : new LinkedHashMap<String, String>(formDataFields);
             return this;
         }
 
-        /**
-         * @since 1.10.0
-         */
         @Experimental
         public Builder addFormDataFile(String name, String fileName, String contentType, byte[] content) {
             if (content.length == 0) {
                 return this;
             }
             if (this.formDataFiles == null) {
-                this.formDataFiles = new LinkedHashMap<>();
+                this.formDataFiles = new LinkedHashMap<String, FormDataFile>();
             }
             this.formDataFiles.put(name, new FormDataFile(fileName, contentType, content));
             return this;
         }
 
-        /**
-         * @since 1.10.0
-         */
         @Experimental
         public Builder formDataFiles(Map<String, FormDataFile> formDataFiles) {
-            if (formDataFiles == null) {
-                this.formDataFiles = null;
-            } else {
-                this.formDataFiles = new LinkedHashMap<>(formDataFiles);
-            }
+            this.formDataFiles = formDataFiles == null ? null : new LinkedHashMap<String, FormDataFile>(formDataFiles);
             return this;
         }
 
@@ -266,3 +241,4 @@ public class HttpRequest {
         }
     }
 }
+
