@@ -1,31 +1,30 @@
+/*
+ * Decompiled with CFR 0.152.
+ * 
+ * Could not load the following classes:
+ *  dev.langchain4j.data.message.ChatMessage
+ *  dev.langchain4j.data.message.ChatMessageSerializer
+ *  dev.langchain4j.store.memory.chat.ChatMemoryStore
+ */
 package dev.langchain4j.store.memory.chat.oracle;
 
 import dev.langchain4j.data.message.ChatMessage;
-import dev.langchain4j.data.message.ChatMessageDeserializer;
 import dev.langchain4j.data.message.ChatMessageSerializer;
 import dev.langchain4j.store.memory.chat.ChatMemoryStore;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
-import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.util.Collections;
 import java.util.List;
 import java.util.regex.Pattern;
 import javax.sql.DataSource;
 
-/**
- * Oracle Database implementation of {@link ChatMemoryStore}.
- *
- * <p>Messages are stored as a JSON array in a single row identified by memory id.
- */
-public final class OracleChatMemoryStore implements ChatMemoryStore {
-
+public final class OracleChatMemoryStore
+implements ChatMemoryStore {
     private static final String DEFAULT_TABLE_NAME = "CHAT_MEMORY";
     private static final String DEFAULT_MEMORY_ID_COLUMN_NAME = "MEMORY_ID";
     private static final String DEFAULT_CONTENT_COLUMN_NAME = "CONTENT";
     private static final Pattern SIMPLE_IDENTIFIER = Pattern.compile("^[A-Za-z_][A-Za-z0-9_]*$");
     private static final Pattern QUOTED_IDENTIFIER = Pattern.compile("^\"([^\"]|\"\")+\"$");
-
     private final DataSource dataSource;
     private final String selectSql;
     private final String mergeSql;
@@ -35,30 +34,17 @@ public final class OracleChatMemoryStore implements ChatMemoryStore {
         if (builder.dataSource == null) {
             throw new IllegalArgumentException("dataSource cannot be null");
         }
-
         this.dataSource = builder.dataSource;
-
-        String tableName =
-                builder.tableName == null ? DEFAULT_TABLE_NAME : validateIdentifier(builder.tableName, "tableName");
-        String memoryIdColumnName = builder.memoryIdColumnName == null
-                ? DEFAULT_MEMORY_ID_COLUMN_NAME
-                : validateIdentifier(builder.memoryIdColumnName, "memoryIdColumnName");
-        String contentColumnName = builder.contentColumnName == null
-                ? DEFAULT_CONTENT_COLUMN_NAME
-                : validateIdentifier(builder.contentColumnName, "contentColumnName");
-
+        String tableName = builder.tableName == null ? DEFAULT_TABLE_NAME : OracleChatMemoryStore.validateIdentifier(builder.tableName, "tableName");
+        String memoryIdColumnName = builder.memoryIdColumnName == null ? DEFAULT_MEMORY_ID_COLUMN_NAME : OracleChatMemoryStore.validateIdentifier(builder.memoryIdColumnName, "memoryIdColumnName");
+        String contentColumnName = builder.contentColumnName == null ? DEFAULT_CONTENT_COLUMN_NAME : OracleChatMemoryStore.validateIdentifier(builder.contentColumnName, "contentColumnName");
         this.selectSql = "SELECT " + contentColumnName + " FROM " + tableName + " WHERE " + memoryIdColumnName + " = ?";
-        this.mergeSql = "MERGE INTO " + tableName + " t "
-                + "USING (SELECT ? AS " + memoryIdColumnName + ", ? AS " + contentColumnName + " FROM dual) s "
-                + "ON (t." + memoryIdColumnName + " = s." + memoryIdColumnName + ") "
-                + "WHEN MATCHED THEN UPDATE SET t." + contentColumnName + " = s." + contentColumnName + " "
-                + "WHEN NOT MATCHED THEN INSERT (" + memoryIdColumnName + ", " + contentColumnName + ") "
-                + "VALUES (s." + memoryIdColumnName + ", s." + contentColumnName + ")";
+        this.mergeSql = "MERGE INTO " + tableName + " t USING (SELECT ? AS " + memoryIdColumnName + ", ? AS " + contentColumnName + " FROM dual) s ON (t." + memoryIdColumnName + " = s." + memoryIdColumnName + ") WHEN MATCHED THEN UPDATE SET t." + contentColumnName + " = s." + contentColumnName + " WHEN NOT MATCHED THEN INSERT (" + memoryIdColumnName + ", " + contentColumnName + ") VALUES (s." + memoryIdColumnName + ", s." + contentColumnName + ")";
         this.deleteSql = "DELETE FROM " + tableName + " WHERE " + memoryIdColumnName + " = ?";
     }
 
     private static String validateIdentifier(String identifier, String fieldName) {
-        if (identifier == null || identifier.trim().isEmpty()) {
+        if (identifier == null || identifier.isBlank()) {
             throw new IllegalArgumentException(fieldName + " cannot be blank");
         }
         if (SIMPLE_IDENTIFIER.matcher(identifier).matches()) {
@@ -74,34 +60,32 @@ public final class OracleChatMemoryStore implements ChatMemoryStore {
         return new Builder();
     }
 
-    @Override
+    /*
+     * Exception decompiling
+     */
     public List<ChatMessage> getMessages(Object memoryId) {
-        if (memoryId == null) {
-            throw new IllegalArgumentException("memoryId cannot be null");
-        }
-
-        try (Connection connection = dataSource.getConnection();
-                PreparedStatement statement = connection.prepareStatement(selectSql)) {
-
-            statement.setObject(1, memoryId);
-            try (ResultSet resultSet = statement.executeQuery()) {
-                if (!resultSet.next()) {
-                    return Collections.emptyList();
-                }
-
-                String json = resultSet.getString(1);
-                if (json == null || json.isEmpty()) {
-                    return Collections.emptyList();
-                }
-                return ChatMessageDeserializer.messagesFromJson(json);
-            }
-
-        } catch (SQLException e) {
-            throw new RuntimeException("Failed to get messages for memoryId=" + memoryId, e);
-        }
+        /*
+         * This method has failed to decompile.  When submitting a bug report, please provide this stack trace, and (if you hold appropriate legal rights) the relevant class file.
+         * 
+         * org.benf.cfr.reader.util.ConfusedCFRException: Started 8 blocks at once
+         *     at org.benf.cfr.reader.bytecode.analysis.opgraph.Op04StructuredStatement.getStartingBlocks(Op04StructuredStatement.java:412)
+         *     at org.benf.cfr.reader.bytecode.analysis.opgraph.Op04StructuredStatement.buildNestedBlocks(Op04StructuredStatement.java:487)
+         *     at org.benf.cfr.reader.bytecode.analysis.opgraph.Op03SimpleStatement.createInitialStructuredBlock(Op03SimpleStatement.java:736)
+         *     at org.benf.cfr.reader.bytecode.CodeAnalyser.getAnalysisInner(CodeAnalyser.java:850)
+         *     at org.benf.cfr.reader.bytecode.CodeAnalyser.getAnalysisOrWrapFail(CodeAnalyser.java:278)
+         *     at org.benf.cfr.reader.bytecode.CodeAnalyser.getAnalysis(CodeAnalyser.java:201)
+         *     at org.benf.cfr.reader.entities.attributes.AttributeCode.analyse(AttributeCode.java:94)
+         *     at org.benf.cfr.reader.entities.Method.analyse(Method.java:531)
+         *     at org.benf.cfr.reader.entities.ClassFile.analyseMid(ClassFile.java:1055)
+         *     at org.benf.cfr.reader.entities.ClassFile.analyseTop(ClassFile.java:942)
+         *     at org.benf.cfr.reader.Driver.doJarVersionTypes(Driver.java:257)
+         *     at org.benf.cfr.reader.Driver.doJar(Driver.java:139)
+         *     at org.benf.cfr.reader.CfrDriverImpl.analyse(CfrDriverImpl.java:76)
+         *     at org.benf.cfr.reader.Main.main(Main.java:54)
+         */
+        throw new IllegalStateException("Decompilation failed");
     }
 
-    @Override
     public void updateMessages(Object memoryId, List<ChatMessage> messages) {
         if (memoryId == null) {
             throw new IllegalArgumentException("memoryId cannot be null");
@@ -109,34 +93,28 @@ public final class OracleChatMemoryStore implements ChatMemoryStore {
         if (messages == null) {
             throw new IllegalArgumentException("messages cannot be null");
         }
-
         String json = ChatMessageSerializer.messagesToJson(messages);
-
-        try (Connection connection = dataSource.getConnection();
-                PreparedStatement statement = connection.prepareStatement(mergeSql)) {
-
+        try (Connection connection = this.dataSource.getConnection();
+             PreparedStatement statement = connection.prepareStatement(this.mergeSql);){
             statement.setObject(1, memoryId);
             statement.setString(2, json);
             statement.executeUpdate();
-
-        } catch (SQLException e) {
+        }
+        catch (SQLException e) {
             throw new RuntimeException("Failed to update messages for memoryId=" + memoryId, e);
         }
     }
 
-    @Override
     public void deleteMessages(Object memoryId) {
         if (memoryId == null) {
             throw new IllegalArgumentException("memoryId cannot be null");
         }
-
-        try (Connection connection = dataSource.getConnection();
-                PreparedStatement statement = connection.prepareStatement(deleteSql)) {
-
+        try (Connection connection = this.dataSource.getConnection();
+             PreparedStatement statement = connection.prepareStatement(this.deleteSql);){
             statement.setObject(1, memoryId);
             statement.executeUpdate();
-
-        } catch (SQLException e) {
+        }
+        catch (SQLException e) {
             throw new RuntimeException("Failed to delete messages for memoryId=" + memoryId, e);
         }
     }
@@ -172,3 +150,4 @@ public final class OracleChatMemoryStore implements ChatMemoryStore {
         }
     }
 }
+
