@@ -1,179 +1,127 @@
+/*
+ * Decompiled with CFR 0.152.
+ * 
+ * Could not load the following classes:
+ *  com.ibm.watsonx.ai.chat.ChatRequest
+ *  com.ibm.watsonx.ai.chat.ChatRequest$Builder
+ *  com.ibm.watsonx.ai.chat.ChatResponse
+ *  com.ibm.watsonx.ai.chat.ChatResponse$ResultChoice
+ *  com.ibm.watsonx.ai.chat.model.AssistantMessage
+ *  com.ibm.watsonx.ai.chat.model.ChatParameters
+ *  com.ibm.watsonx.ai.chat.model.ChatUsage
+ *  dev.langchain4j.data.message.AiMessage
+ *  dev.langchain4j.data.message.AiMessage$Builder
+ *  dev.langchain4j.exception.ContentFilteredException
+ *  dev.langchain4j.internal.Utils
+ *  dev.langchain4j.model.ModelProvider
+ *  dev.langchain4j.model.chat.Capability
+ *  dev.langchain4j.model.chat.ChatModel
+ *  dev.langchain4j.model.chat.listener.ChatModelListener
+ *  dev.langchain4j.model.chat.request.ChatRequest
+ *  dev.langchain4j.model.chat.request.ChatRequestParameters
+ *  dev.langchain4j.model.chat.response.ChatResponse
+ *  dev.langchain4j.model.output.FinishReason
+ *  dev.langchain4j.model.output.TokenUsage
+ */
 package dev.langchain4j.model.watsonx;
 
-import static dev.langchain4j.internal.Utils.getOrDefault;
-import static dev.langchain4j.internal.Utils.isNotNullOrBlank;
-import static dev.langchain4j.model.ModelProvider.WATSONX;
-import static java.util.Objects.nonNull;
-import static java.util.stream.Collectors.toCollection;
-
-import com.ibm.watsonx.ai.chat.ChatResponse.ResultChoice;
+import com.ibm.watsonx.ai.chat.ChatRequest;
+import com.ibm.watsonx.ai.chat.ChatResponse;
 import com.ibm.watsonx.ai.chat.model.AssistantMessage;
-import com.ibm.watsonx.ai.chat.model.ChatMessage;
+import com.ibm.watsonx.ai.chat.model.ChatParameters;
 import com.ibm.watsonx.ai.chat.model.ChatUsage;
-import com.ibm.watsonx.ai.chat.model.Tool;
-import dev.langchain4j.agent.tool.ToolSpecification;
 import dev.langchain4j.data.message.AiMessage;
 import dev.langchain4j.exception.ContentFilteredException;
+import dev.langchain4j.internal.Utils;
 import dev.langchain4j.model.ModelProvider;
 import dev.langchain4j.model.chat.Capability;
 import dev.langchain4j.model.chat.ChatModel;
 import dev.langchain4j.model.chat.listener.ChatModelListener;
-import dev.langchain4j.model.chat.request.ChatRequest;
 import dev.langchain4j.model.chat.request.ChatRequestParameters;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import dev.langchain4j.model.output.FinishReason;
 import dev.langchain4j.model.output.TokenUsage;
+import dev.langchain4j.model.watsonx.Converter;
+import dev.langchain4j.model.watsonx.WatsonxChat;
+import dev.langchain4j.model.watsonx.WatsonxChatRequestParameters;
+import dev.langchain4j.model.watsonx.WatsonxChatResponseMetadata;
+import dev.langchain4j.model.watsonx.WatsonxExceptionMapper;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-/**
- * A {@link ChatModel} implementation that integrates IBM watsonx.ai with LangChain4j.
- * <p>
- * <b>Example usage:</b>
- *
- * <pre>{@code
- * ChatModel chatModel = WatsonxChatModel.builder()
- *     .baseUrl("https://...") // or use CloudRegion
- *     .apiKey("...")
- *     .projectId("...")
- *     .modelName("ibm/granite-3-3-8b-instruct")
- *     .maxOutputTokens(0)
- *     .temperature(0.7)
- *     .build();
- * }</pre>
- *
- */
-public class WatsonxChatModel extends WatsonxChat implements ChatModel {
-
+public class WatsonxChatModel
+extends WatsonxChat
+implements ChatModel {
     private WatsonxChatModel(Builder builder) {
         super(builder);
     }
 
-    @Override
-    public ChatResponse doChat(ChatRequest chatRequest) {
-
-        validate(chatRequest.parameters());
-
-        List<ToolSpecification> toolSpecifications = getOrDefault(
-                chatRequest.parameters().toolSpecifications(), defaultRequestParameters.toolSpecifications());
-
-        List<ChatMessage> messages =
-                chatRequest.messages().stream().map(Converter::toChatMessage).collect(toCollection(ArrayList::new));
-
-        List<Tool> tools = nonNull(toolSpecifications) && !toolSpecifications.isEmpty()
-                ? toolSpecifications.stream().map(Converter::toTool).collect(Collectors.toList())
-                : null;
-
-        com.ibm.watsonx.ai.chat.ChatRequest.Builder watsonxChatRequestBuilder = com.ibm.watsonx.ai.chat.ChatRequest.builder();
-
+    public ChatResponse doChat(dev.langchain4j.model.chat.request.ChatRequest chatRequest) {
+        this.validate(chatRequest.parameters());
+        List toolSpecifications = Utils.getOrDefault((List)chatRequest.parameters().toolSpecifications(), (List)this.defaultRequestParameters.toolSpecifications());
+        List messages = chatRequest.messages().stream().map(Converter::toChatMessage).collect(Collectors.toCollection(ArrayList::new));
+        List tools = Objects.nonNull(toolSpecifications) && !toolSpecifications.isEmpty() ? toolSpecifications.stream().map(Converter::toTool).toList() : null;
+        ChatRequest.Builder watsonxChatRequestBuilder = ChatRequest.builder();
         String deploymentId = null;
-
-        if (chatRequest.parameters() instanceof WatsonxChatRequestParameters wcrp) {
+        ChatRequestParameters chatRequestParameters = chatRequest.parameters();
+        if (chatRequestParameters instanceof WatsonxChatRequestParameters) {
+            WatsonxChatRequestParameters wcrp = (WatsonxChatRequestParameters)chatRequestParameters;
             deploymentId = wcrp.deploymentId();
-            if (nonNull(wcrp.thinking())) watsonxChatRequestBuilder.thinking(wcrp.thinking());
+            if (Objects.nonNull(wcrp.thinking())) {
+                watsonxChatRequestBuilder.thinking(wcrp.thinking());
+            }
         }
-
-        com.ibm.watsonx.ai.chat.model.ChatParameters parameters = Converter.toChatParameters(chatRequest.parameters());
-        com.ibm.watsonx.ai.chat.ChatRequest watsonxChatRequest = watsonxChatRequestBuilder
-                .messages(messages)
-                .tools(tools)
-                .parameters(parameters)
-                .deploymentId(deploymentId)
-                .build();
-
-        com.ibm.watsonx.ai.chat.ChatResponse chatResponse =
-                WatsonxExceptionMapper.INSTANCE.withExceptionMapper(() -> chatProvider.chat(watsonxChatRequest));
-
+        ChatParameters parameters = Converter.toChatParameters(chatRequest.parameters());
+        ChatRequest watsonxChatRequest = watsonxChatRequestBuilder.messages(messages).tools(tools).parameters(parameters).deploymentId(deploymentId).build();
+        com.ibm.watsonx.ai.chat.ChatResponse chatResponse = (com.ibm.watsonx.ai.chat.ChatResponse)WatsonxExceptionMapper.INSTANCE.withExceptionMapper(() -> this.chatProvider.chat(watsonxChatRequest));
         AssistantMessage assistantMessage = chatResponse.toAssistantMessage();
-        ResultChoice choice = chatResponse.choices().get(0);
+        ChatResponse.ResultChoice choice = (ChatResponse.ResultChoice)chatResponse.choices().get(0);
         ChatUsage usage = chatResponse.usage();
-
-        if (isNotNullOrBlank(assistantMessage.refusal()))
+        if (Utils.isNotNullOrBlank((String)assistantMessage.refusal())) {
             throw new ContentFilteredException(assistantMessage.refusal());
-
-        AiMessage.Builder aiMessage = AiMessage.builder();
-
-        if (nonNull(assistantMessage.toolCalls())
-                && !assistantMessage.toolCalls().isEmpty()) {
-            aiMessage.toolExecutionRequests(assistantMessage.toolCalls().stream()
-                    .map(Converter::toToolExecutionRequest)
-                    .collect(Collectors.toList()));
         }
-
+        AiMessage.Builder aiMessage = AiMessage.builder();
+        if (Objects.nonNull(assistantMessage.toolCalls()) && !assistantMessage.toolCalls().isEmpty()) {
+            aiMessage.toolExecutionRequests(assistantMessage.toolCalls().stream().map(Converter::toToolExecutionRequest).toList());
+        }
         aiMessage.thinking(assistantMessage.thinking());
         aiMessage.text(assistantMessage.content());
-
         FinishReason finishReason = Converter.toFinishReason(choice.finishReason());
-        TokenUsage tokenUsage = usage != null
-                ? new TokenUsage(usage.promptTokens(), usage.completionTokens(), usage.totalTokens())
-                : null;
-
-        return ChatResponse.builder()
-                .aiMessage(aiMessage.build())
-                .metadata(WatsonxChatResponseMetadata.builder()
-                        .created(chatResponse.created())
-                        .modelVersion(chatResponse.modelVersion())
-                        .finishReason(finishReason)
-                        .id(chatResponse.id())
-                        .modelName(chatResponse.modelId())
-                        .tokenUsage(tokenUsage)
-                        .build())
-                .build();
+        TokenUsage tokenUsage = usage != null ? new TokenUsage(usage.promptTokens(), usage.completionTokens(), usage.totalTokens()) : null;
+        return ChatResponse.builder().aiMessage(aiMessage.build()).metadata(((WatsonxChatResponseMetadata.Builder)((WatsonxChatResponseMetadata.Builder)((WatsonxChatResponseMetadata.Builder)((WatsonxChatResponseMetadata.Builder)WatsonxChatResponseMetadata.builder().created(chatResponse.created()).modelVersion(chatResponse.modelVersion()).finishReason(finishReason)).id(chatResponse.id())).modelName(chatResponse.modelId())).tokenUsage(tokenUsage)).build()).build();
     }
 
-    @Override
     public List<ChatModelListener> listeners() {
-        return listeners;
+        return this.listeners;
     }
 
-    @Override
     public ChatRequestParameters defaultRequestParameters() {
-        return defaultRequestParameters;
+        return this.defaultRequestParameters;
     }
 
-    @Override
     public ModelProvider provider() {
-        return WATSONX;
+        return ModelProvider.WATSONX;
     }
 
-    @Override
     public Set<Capability> supportedCapabilities() {
-        return supportedCapabilities;
+        return this.supportedCapabilities;
     }
 
-    /**
-     * Returns a new {@link Builder} instance.
-     * <p>
-     * <b>Example usage:</b>
-     *
-     * <pre>{@code
-     * ChatModel chatModel = WatsonxChatModel.builder()
-     *     .baseUrl("https://...") // or use CloudRegion
-     *     .apiKey("...")
-     *     .projectId("...")
-     *     .modelName("ibm/granite-3-8b-instruct")
-     *     .maxOutputTokens(0)
-     *     .temperature(0.7)
-     *     .build();
-     * }</pre>
-     *
-     * @return {@link Builder} instance.
-     */
     public static Builder builder() {
         return new Builder();
     }
 
-    /**
-     * Builder class for constructing {@link WatsonxChatModel} instances with configurable parameters.
-     */
-    public static class Builder extends WatsonxChat.Builder<Builder> {
-
-        private Builder() {}
+    public static class Builder
+    extends WatsonxChat.Builder<Builder> {
+        private Builder() {
+        }
 
         public WatsonxChatModel build() {
             return new WatsonxChatModel(this);
         }
     }
 }
+
