@@ -1,8 +1,24 @@
+/*
+ * Decompiled with CFR 0.152.
+ * 
+ * Could not load the following classes:
+ *  com.ibm.watsonx.ai.detection.DetectionService
+ *  com.ibm.watsonx.ai.detection.DetectionService$Builder
+ *  com.ibm.watsonx.ai.detection.DetectionTextRequest
+ *  com.ibm.watsonx.ai.detection.DetectionTextResponse
+ *  com.ibm.watsonx.ai.detection.detector.BaseDetector
+ *  dev.langchain4j.exception.LangChain4jException
+ *  dev.langchain4j.exception.UnsupportedFeatureException
+ *  dev.langchain4j.internal.DefaultExecutorProvider
+ *  dev.langchain4j.internal.Utils
+ *  dev.langchain4j.model.ModelProvider
+ *  dev.langchain4j.model.moderation.Moderation
+ *  dev.langchain4j.model.moderation.ModerationModel
+ *  dev.langchain4j.model.moderation.ModerationRequest
+ *  dev.langchain4j.model.moderation.ModerationResponse
+ *  dev.langchain4j.model.moderation.listener.ModerationModelListener
+ */
 package dev.langchain4j.model.watsonx;
-
-import static dev.langchain4j.internal.Utils.copy;
-import static java.util.Objects.isNull;
-import static java.util.Objects.nonNull;
 
 import com.ibm.watsonx.ai.detection.DetectionService;
 import com.ibm.watsonx.ai.detection.DetectionTextRequest;
@@ -11,186 +27,98 @@ import com.ibm.watsonx.ai.detection.detector.BaseDetector;
 import dev.langchain4j.exception.LangChain4jException;
 import dev.langchain4j.exception.UnsupportedFeatureException;
 import dev.langchain4j.internal.DefaultExecutorProvider;
+import dev.langchain4j.internal.Utils;
 import dev.langchain4j.model.ModelProvider;
 import dev.langchain4j.model.moderation.Moderation;
 import dev.langchain4j.model.moderation.ModerationModel;
 import dev.langchain4j.model.moderation.ModerationRequest;
 import dev.langchain4j.model.moderation.ModerationResponse;
 import dev.langchain4j.model.moderation.listener.ModerationModelListener;
+import dev.langchain4j.model.watsonx.WatsonxBuilder;
+import dev.langchain4j.model.watsonx.WatsonxExceptionMapper;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.stream.Collectors;
 
-/**
- * A {@link ModerationModel} implementation that integrates IBM watsonx.ai with LangChain4j.
- * <p>
- * <b>Example usage:</b>
- *
- * <pre>{@code
- * ModerationModel chatModel = WatsonxModerationModel.builder()
- *     .baseUrl("https://...") // or use CloudRegion
- *     .apiKey("...")
- *     .projectId("...")
- *     .detectors(Pii.ofDefaults(), GraniteGuardian.ofDefaults())
- *     .build();
- * }</pre>
- *
- */
-public class WatsonxModerationModel implements ModerationModel {
-
+public class WatsonxModerationModel
+implements ModerationModel {
     private final List<BaseDetector> detectors;
     private final DetectionService detectionService;
     private final List<ModerationModelListener> listeners;
 
     public WatsonxModerationModel(Builder builder) {
-
-        if (isNull(builder.detectors) || builder.detectors.isEmpty())
+        if (Objects.isNull(builder.detectors) || builder.detectors.isEmpty()) {
             throw new IllegalArgumentException("At least one detector must be provided");
-
-        detectors = builder.detectors;
-
-        DetectionService.Builder detectionServiceBuilder = nonNull(builder.authenticator)
-                ? DetectionService.builder().authenticator(builder.authenticator)
-                : DetectionService.builder().apiKey(builder.apiKey);
-
-        detectionService = detectionServiceBuilder
-                .baseUrl(builder.baseUrl)
-                .version(builder.version)
-                .projectId(builder.projectId)
-                .spaceId(builder.spaceId)
-                .timeout(builder.timeout)
-                .logRequests(builder.logRequests)
-                .logResponses(builder.logResponses)
-                .httpClient(builder.httpClient)
-                .verifySsl(builder.verifySsl)
-                .build();
-
-        this.listeners = copy(builder.listeners);
+        }
+        this.detectors = builder.detectors;
+        DetectionService.Builder detectionServiceBuilder = Objects.nonNull(builder.authenticator) ? (DetectionService.Builder)DetectionService.builder().authenticator(builder.authenticator) : (DetectionService.Builder)DetectionService.builder().apiKey(builder.apiKey);
+        this.detectionService = ((DetectionService.Builder)((DetectionService.Builder)((DetectionService.Builder)((DetectionService.Builder)((DetectionService.Builder)((DetectionService.Builder)((DetectionService.Builder)((DetectionService.Builder)((DetectionService.Builder)detectionServiceBuilder.baseUrl(builder.baseUrl)).version(builder.version)).projectId(builder.projectId)).spaceId(builder.spaceId)).timeout(builder.timeout)).logRequests(builder.logRequests)).logResponses(builder.logResponses)).httpClient(builder.httpClient)).verifySsl(builder.verifySsl)).build();
+        this.listeners = Utils.copy(builder.listeners);
     }
 
-    @Override
     public List<ModerationModelListener> listeners() {
-        return listeners;
+        return this.listeners;
     }
 
-    @Override
     public ModelProvider provider() {
         return ModelProvider.WATSONX;
     }
 
-    @Override
     public ModerationResponse doModerate(ModerationRequest moderationRequest) {
         if (!this.modelName().equals(moderationRequest.modelName())) {
             throw new UnsupportedFeatureException("can't change model name dynamically");
         }
-
-        Stream<CompletableFuture<DetectionResult>> futures = moderationRequest.texts().stream()
-                .map(input -> CompletableFuture.supplyAsync(
-                        () -> moderateSingleInput(input), DefaultExecutorProvider.getDefaultExecutorService()))
-                .collect(Collectors.toList());
-
+        List futures = moderationRequest.texts().stream().map(input -> CompletableFuture.supplyAsync(() -> this.moderateSingleInput((String)input), DefaultExecutorProvider.getDefaultExecutorService())).toList();
         try {
-            return futures.stream()
-                    .map(CompletableFuture::join)
-                    .filter(response -> response.moderation().flagged())
-                    .findFirst()
-                    .orElse(ModerationResponse.builder()
-                            .moderation(Moderation.notFlagged())
-                            .build());
-        } catch (CompletionException e) {
+            return futures.stream().map(CompletableFuture::join).filter(response -> response.moderation().flagged()).findFirst().orElse(ModerationResponse.builder().moderation(Moderation.notFlagged()).build());
+        }
+        catch (CompletionException e) {
+            RuntimeException runtimeException;
             Throwable cause = e.getCause();
-            throw cause instanceof LangChain4jException langchainException
-                    ? langchainException
-                    : new RuntimeException(cause);
+            if (cause instanceof LangChain4jException) {
+                LangChain4jException langchainException = (LangChain4jException)cause;
+                runtimeException = langchainException;
+            } else {
+                runtimeException = new RuntimeException(cause);
+            }
+            throw runtimeException;
         }
     }
 
     private ModerationResponse moderateSingleInput(String input) {
-        CompletableFuture<DetectionResult> request =
-                DetectionTextRequest.builder().input(input).detectors(detectors).build();
-
-        return WatsonxExceptionMapper.INSTANCE.withExceptionMapper(
-                () -> detectionService.detect(request).detections().stream()
-                        .findFirst()
-                        .map(this::createModerationResponse)
-                        .orElse(ModerationResponse.builder()
-                                .moderation(Moderation.notFlagged())
-                                .build()));
+        DetectionTextRequest request = DetectionTextRequest.builder().input(input).detectors(this.detectors).build();
+        return (ModerationResponse)WatsonxExceptionMapper.INSTANCE.withExceptionMapper(() -> this.detectionService.detect(request).detections().stream().findFirst().map(this::createModerationResponse).orElse(ModerationResponse.builder().moderation(Moderation.notFlagged()).build()));
     }
 
-    /**
-     * Returns a new {@link Builder} instance.
-     * <p>
-     * <b>Example usage:</b>
-     *
-     * <pre>{@code
-     * ModerationModel chatModel = WatsonxModerationModel.builder()
-     *     .baseUrl("https://...") // or use CloudRegion
-     *     .apiKey("...")
-     *     .projectId("...")
-     *     .detectors(Pii.ofDefaults(), GraniteGuardian.ofDefaults())
-     *     .build();
-     * }</pre>
-     *
-     * @return {@link Builder} instance.
-     */
     public static Builder builder() {
         return new Builder();
     }
 
     private ModerationResponse createModerationResponse(DetectionTextResponse detectionTextResponse) {
-        Moderation moderation = Moderation.flagged(detectionTextResponse.text());
-        Map<String, Object> metadata = Collections.unmodifiableMap(new HashMap<>() {{
-    put("detection", detectionTextResponse.detection());
-    put("detection_type", detectionTextResponse.detectionType());
-    put("start", detectionTextResponse.start());
-    put("end", detectionTextResponse.end());
-    put("score", detectionTextResponse.score());
-}});
-        return ModerationResponse.builder()
-                .moderation(moderation)
-                .metadata(metadata)
-                .build();
+        Moderation moderation = Moderation.flagged((String)detectionTextResponse.text());
+        Map metadata = Map.of((Object)"detection", (Object)detectionTextResponse.detection(), (Object)"detection_type", (Object)detectionTextResponse.detectionType(), (Object)"start", (Object)detectionTextResponse.start(), (Object)"end", (Object)detectionTextResponse.end(), (Object)"score", (Object)detectionTextResponse.score());
+        return ModerationResponse.builder().moderation(moderation).metadata(metadata).build();
     }
 
-    /**
-     * Builder class for constructing {@link WatsonxModerationModel} instances with configurable parameters.
-     */
-    public static class Builder extends WatsonxBuilder<Builder> {
+    public static class Builder
+    extends WatsonxBuilder<Builder> {
         private List<BaseDetector> detectors;
         private List<ModerationModelListener> listeners;
 
-        private Builder() {}
+        private Builder() {
+        }
 
-        /**
-         * Sets the list of detectors to use.
-         *
-         * @param detectors the list of detectors
-         */
         public Builder detectors(List<BaseDetector> detectors) {
             this.detectors = detectors;
             return this;
         }
 
-        /**
-         * Sets the list of detectors to use.
-         *
-         * @param detectors the list of detectors
-         */
-        public Builder detectors(BaseDetector... detectors) {
-            return detectors(Collections.singletonList(detectors));
+        public Builder detectors(BaseDetector ... detectors) {
+            return this.detectors(List.of((Object[])detectors));
         }
 
-        /**
-         * Sets the listeners for this moderation model.
-         *
-         * @param listeners the listeners.
-         * @return {@code this}.
-         */
         public Builder listeners(List<ModerationModelListener> listeners) {
             this.listeners = listeners;
             return this;
@@ -201,3 +129,4 @@ public class WatsonxModerationModel implements ModerationModel {
         }
     }
 }
+
