@@ -1,216 +1,164 @@
+/*
+ * Decompiled with CFR 0.152.
+ * 
+ * Could not load the following classes:
+ *  com.ibm.watsonx.ai.chat.ChatHandler
+ *  com.ibm.watsonx.ai.chat.ChatRequest
+ *  com.ibm.watsonx.ai.chat.ChatRequest$Builder
+ *  com.ibm.watsonx.ai.chat.ChatResponse
+ *  com.ibm.watsonx.ai.chat.ChatResponse$ResultChoice
+ *  com.ibm.watsonx.ai.chat.model.AssistantMessage
+ *  com.ibm.watsonx.ai.chat.model.ChatParameters
+ *  com.ibm.watsonx.ai.chat.model.ChatUsage
+ *  com.ibm.watsonx.ai.chat.model.CompletedToolCall
+ *  com.ibm.watsonx.ai.chat.model.PartialChatResponse
+ *  com.ibm.watsonx.ai.chat.model.PartialToolCall
+ *  dev.langchain4j.data.message.AiMessage
+ *  dev.langchain4j.data.message.AiMessage$Builder
+ *  dev.langchain4j.exception.ContentFilteredException
+ *  dev.langchain4j.internal.Utils
+ *  dev.langchain4j.model.ModelProvider
+ *  dev.langchain4j.model.chat.Capability
+ *  dev.langchain4j.model.chat.StreamingChatModel
+ *  dev.langchain4j.model.chat.listener.ChatModelListener
+ *  dev.langchain4j.model.chat.request.ChatRequest
+ *  dev.langchain4j.model.chat.request.ChatRequestParameters
+ *  dev.langchain4j.model.chat.response.ChatResponse
+ *  dev.langchain4j.model.chat.response.PartialThinking
+ *  dev.langchain4j.model.chat.response.StreamingChatResponseHandler
+ *  dev.langchain4j.model.output.FinishReason
+ *  dev.langchain4j.model.output.TokenUsage
+ */
 package dev.langchain4j.model.watsonx;
 
-import static dev.langchain4j.internal.Utils.getOrDefault;
-import static dev.langchain4j.internal.Utils.isNotNullOrBlank;
-import static dev.langchain4j.model.ModelProvider.WATSONX;
-import static java.util.Objects.nonNull;
-import static java.util.stream.Collectors.toCollection;
-
 import com.ibm.watsonx.ai.chat.ChatHandler;
-import com.ibm.watsonx.ai.chat.ChatResponse.ResultChoice;
-import com.ibm.watsonx.ai.chat.model.ChatMessage;
+import com.ibm.watsonx.ai.chat.ChatRequest;
+import com.ibm.watsonx.ai.chat.ChatResponse;
+import com.ibm.watsonx.ai.chat.model.AssistantMessage;
+import com.ibm.watsonx.ai.chat.model.ChatParameters;
 import com.ibm.watsonx.ai.chat.model.ChatUsage;
 import com.ibm.watsonx.ai.chat.model.CompletedToolCall;
 import com.ibm.watsonx.ai.chat.model.PartialChatResponse;
 import com.ibm.watsonx.ai.chat.model.PartialToolCall;
-import com.ibm.watsonx.ai.chat.model.Tool;
-import dev.langchain4j.agent.tool.ToolSpecification;
 import dev.langchain4j.data.message.AiMessage;
 import dev.langchain4j.exception.ContentFilteredException;
+import dev.langchain4j.internal.Utils;
 import dev.langchain4j.model.ModelProvider;
 import dev.langchain4j.model.chat.Capability;
 import dev.langchain4j.model.chat.StreamingChatModel;
 import dev.langchain4j.model.chat.listener.ChatModelListener;
-import dev.langchain4j.model.chat.request.ChatRequest;
 import dev.langchain4j.model.chat.request.ChatRequestParameters;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import dev.langchain4j.model.chat.response.PartialThinking;
 import dev.langchain4j.model.chat.response.StreamingChatResponseHandler;
 import dev.langchain4j.model.output.FinishReason;
 import dev.langchain4j.model.output.TokenUsage;
+import dev.langchain4j.model.watsonx.Converter;
+import dev.langchain4j.model.watsonx.WatsonxChat;
+import dev.langchain4j.model.watsonx.WatsonxChatRequestParameters;
+import dev.langchain4j.model.watsonx.WatsonxChatResponseMetadata;
+import dev.langchain4j.model.watsonx.WatsonxExceptionMapper;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-/**
- * A {@link StreamingChatModel} implementation that integrates IBM watsonx.ai with LangChain4j.
- * <p>
- * <b>Example usage:</b>
- *
- * <pre>{@code
- *
- * StreamingChatModel chatModel = WatsonxStreamingChatModel.builder()
- *     .baseUrl("https://...") // or use CloudRegion
- *     .apiKey("...")
- *     .projectId("...")
- *     .modelName("ibm/granite-3-3-8b-instruct")
- *     .maxOutputTokens(0)
- *     .temperature(0.7)
- *     .build();
- * }</pre>
- *
- */
-public class WatsonxStreamingChatModel extends WatsonxChat implements StreamingChatModel {
-
+public class WatsonxStreamingChatModel
+extends WatsonxChat
+implements StreamingChatModel {
     private WatsonxStreamingChatModel(Builder builder) {
         super(builder);
     }
 
-    @Override
-    public void doChat(ChatRequest chatRequest, StreamingChatResponseHandler handler) {
-
-        validate(chatRequest.parameters());
-
-        List<ToolSpecification> toolSpecifications = getOrDefault(
-                chatRequest.parameters().toolSpecifications(), defaultRequestParameters.toolSpecifications());
-
-        List<ChatMessage> messages =
-                chatRequest.messages().stream().map(Converter::toChatMessage).collect(toCollection(ArrayList::new));
-
-        List<Tool> tools = nonNull(toolSpecifications) && toolSpecifications.size() > 0
-                ? toolSpecifications.stream().map(Converter::toTool).collect(Collectors.toList())
-                : null;
-
+    public void doChat(dev.langchain4j.model.chat.request.ChatRequest chatRequest, final StreamingChatResponseHandler handler) {
+        this.validate(chatRequest.parameters());
+        List toolSpecifications = Utils.getOrDefault((List)chatRequest.parameters().toolSpecifications(), (List)this.defaultRequestParameters.toolSpecifications());
+        List messages = chatRequest.messages().stream().map(Converter::toChatMessage).collect(Collectors.toCollection(ArrayList::new));
+        List tools = Objects.nonNull(toolSpecifications) && toolSpecifications.size() > 0 ? toolSpecifications.stream().map(Converter::toTool).toList() : null;
         String deploymentId = null;
-        com.ibm.watsonx.ai.chat.ChatRequest.Builder watsonxChatRequestBuilder = com.ibm.watsonx.ai.chat.ChatRequest.builder();
-
-        if (chatRequest.parameters() instanceof WatsonxChatRequestParameters wcrp) {
+        ChatRequest.Builder watsonxChatRequestBuilder = ChatRequest.builder();
+        ChatRequestParameters chatRequestParameters = chatRequest.parameters();
+        if (chatRequestParameters instanceof WatsonxChatRequestParameters) {
+            WatsonxChatRequestParameters wcrp = (WatsonxChatRequestParameters)chatRequestParameters;
             deploymentId = wcrp.deploymentId();
-            if (nonNull(wcrp.thinking())) watsonxChatRequestBuilder.thinking(wcrp.thinking());
+            if (Objects.nonNull(wcrp.thinking())) {
+                watsonxChatRequestBuilder.thinking(wcrp.thinking());
+            }
         }
+        ChatParameters parameters = Converter.toChatParameters(chatRequest.parameters());
+        ChatRequest watsonxChatRequest = watsonxChatRequestBuilder.messages(messages).tools(tools).parameters(parameters).deploymentId(deploymentId).build();
+        this.chatProvider.chatStreaming(watsonxChatRequest, new ChatHandler(){
 
-        com.ibm.watsonx.ai.chat.model.ChatParameters parameters = Converter.toChatParameters(chatRequest.parameters());
-        com.ibm.watsonx.ai.chat.ChatRequest watsonxChatRequest = watsonxChatRequestBuilder
-                .messages(messages)
-                .tools(tools)
-                .parameters(parameters)
-                .deploymentId(deploymentId)
-                .build();
-
-        chatProvider.chatStreaming(watsonxChatRequest, new ChatHandler() {
-            @Override
             public void onCompleteResponse(com.ibm.watsonx.ai.chat.ChatResponse completeResponse) {
-
-                ResultChoice choice = completeResponse.choices().get(0);
+                ChatResponse.ResultChoice choice = (ChatResponse.ResultChoice)completeResponse.choices().get(0);
                 FinishReason finishReason = Converter.toFinishReason(choice.finishReason());
                 ChatUsage completeUsage = completeResponse.usage();
-                TokenUsage tokenUsage = completeUsage != null
-                        ? new TokenUsage(
-                                completeUsage.promptTokens(),
-                                completeUsage.completionTokens(),
-                                completeUsage.totalTokens())
-                        : null;
-
+                TokenUsage tokenUsage = completeUsage != null ? new TokenUsage(completeUsage.promptTokens(), completeUsage.completionTokens(), completeUsage.totalTokens()) : null;
                 AssistantMessage assistantMessage = completeResponse.toAssistantMessage();
                 AiMessage.Builder aiMessage = AiMessage.builder();
-
-                if (isNotNullOrBlank(assistantMessage.refusal()))
-                    handler.onError(new ContentFilteredException(assistantMessage.refusal()));
-
-                if (nonNull(assistantMessage.toolCalls())) {
-                    aiMessage.toolExecutionRequests(assistantMessage.toolCalls().stream()
-                            .map(Converter::toToolExecutionRequest)
-                            .collect(Collectors.toList()));
+                if (Utils.isNotNullOrBlank((String)assistantMessage.refusal())) {
+                    handler.onError((Throwable)new ContentFilteredException(assistantMessage.refusal()));
                 }
-
+                if (Objects.nonNull(assistantMessage.toolCalls())) {
+                    aiMessage.toolExecutionRequests(assistantMessage.toolCalls().stream().map(Converter::toToolExecutionRequest).toList());
+                }
                 aiMessage.thinking(assistantMessage.thinking());
                 aiMessage.text(assistantMessage.content());
-
-                ChatResponse chatResponse = ChatResponse.builder()
-                        .aiMessage(aiMessage.build())
-                        .metadata(WatsonxChatResponseMetadata.builder()
-                                .created(completeResponse.created())
-                                .modelVersion(completeResponse.modelVersion())
-                                .finishReason(finishReason)
-                                .id(completeResponse.id())
-                                .modelName(completeResponse.modelId())
-                                .tokenUsage(tokenUsage)
-                                .build())
-                        .build();
-
+                ChatResponse chatResponse = ChatResponse.builder().aiMessage(aiMessage.build()).metadata(((WatsonxChatResponseMetadata.Builder)((WatsonxChatResponseMetadata.Builder)((WatsonxChatResponseMetadata.Builder)((WatsonxChatResponseMetadata.Builder)WatsonxChatResponseMetadata.builder().created(completeResponse.created()).modelVersion(completeResponse.modelVersion()).finishReason(finishReason)).id(completeResponse.id())).modelName(completeResponse.modelId())).tokenUsage(tokenUsage)).build()).build();
                 handler.onCompleteResponse(chatResponse);
             }
 
-            @Override
             public void onError(Throwable error) {
-                handler.onError(WatsonxExceptionMapper.INSTANCE.mapException(error));
+                handler.onError((Throwable)WatsonxExceptionMapper.INSTANCE.mapException(error));
             }
 
-            @Override
             public void onPartialResponse(String partialResponse, PartialChatResponse partialChatResponse) {
                 handler.onPartialResponse(partialResponse);
             }
 
-            @Override
             public void onCompleteToolCall(CompletedToolCall completedToolCall) {
                 handler.onCompleteToolCall(Converter.toCompleteToolCall(completedToolCall.toolCall()));
             }
 
-            @Override
             public void onPartialThinking(String partialThinking, PartialChatResponse partialChatResponse) {
                 handler.onPartialThinking(new PartialThinking(partialThinking));
             }
 
-            @Override
             public void onPartialToolCall(PartialToolCall partialToolCall) {
                 handler.onPartialToolCall(Converter.toPartialToolCall(partialToolCall));
             }
         });
     }
 
-    @Override
     public List<ChatModelListener> listeners() {
-        return listeners;
+        return this.listeners;
     }
 
-    @Override
     public ChatRequestParameters defaultRequestParameters() {
         return this.defaultRequestParameters;
     }
 
-    @Override
     public Set<Capability> supportedCapabilities() {
-        return supportedCapabilities;
+        return this.supportedCapabilities;
     }
 
-    @Override
     public ModelProvider provider() {
-        return WATSONX;
+        return ModelProvider.WATSONX;
     }
 
-    /**
-     * Returns a new {@link Builder} instance.
-     * <p>
-     * <b>Example usage:</b>
-     *
-     * <pre>{@code
-     * StreamingChatModel chatModel = WatsonxStreamingChatModel.builder()
-     *     .baseUrl("https://...") // or use CloudRegion
-     *     .apiKey("...")
-     *     .projectId("...")
-     *     .modelName("ibm/granite-3-8b-instruct")
-     *     .maxOutputTokens(0)
-     *     .temperature(0.7)
-     *     .build();
-     * }</pre>
-     *
-     * @return {@link Builder} instance.
-     *
-     */
     public static Builder builder() {
         return new Builder();
     }
 
-    /**
-     * Builder class for constructing {@link WatsonxStreamingChatModel} instances with configurable parameters.
-     */
-    public static class Builder extends WatsonxChat.Builder<Builder> {
-
-        private Builder() {}
+    public static class Builder
+    extends WatsonxChat.Builder<Builder> {
+        private Builder() {
+        }
 
         public WatsonxStreamingChatModel build() {
             return new WatsonxStreamingChatModel(this);
         }
     }
 }
+
